t+ur:[[ریاستہائے متحدہ امریکہ]] t-balance ([[WT:EDIT|Assisted]]) <United States of America#8210253>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -52,8 +52,8 @@
 * Japanese: {{t+|ja|米国|tr=べいこく, Béikoku}}, {{t+|ja|アメリカ合衆国|tr=アメリカがっしゅうこく, Ameriká Gasshūkoku}}, {{t+|ja|米|tr=べい, Bei-}} (''abbreviation'')
 * Kazakh: [[Америка Құрама Штаттары]]
 * [[Khmer]]: {{Khmr|[[សហរដ្ឋអាមេរិក]]}} (sahā rōŭt āmērik)
-{{trans-mid}}
 * Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk)
+{{trans-mid}}
 * [[Kyrgyz]]: [[Америка Кошмо Штаттары]] (Amerika Koşmo Ştattarı)
 * Lao: {{t-|lo|ສະຫະລັດອະເມລິກາ|tr=saha lat 'ameelikaa|sc=Laoo|xs=Lao}}
 * Latin: {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}, {{t|la|Civitates Foederatae Americae}}
@@ -87,6 +87,7 @@
 * Thai: {{Thai|[[สหรัฐอเมริกา]]}} (sàhà rát àmayrígaa),  {{t|th|อเมริกา|tr=àmayrígaa|sc=Thai}},  {{t|th|ประเทศสหรัฐอเมริกา|tr=bpràtêt sàhà rát àmayrígaa|sc=Thai}}
 * Turkish: {{t+|tr|Amerika Birleşik Devletleri}}, {{t+|tr|ABD}}
 * Ukrainian: {{t|uk|Сполучені Штати Америки|m|p|tr=Spolučeni Štáti Amériki|xs=Ukrainian}}, {{t+|uk|США|xs=Ukrainian}}
+* Urdu: {{t|ur|ریاستہائے متحدہ امریکہ|sc=ur-Arab}}
 * [[Uyghur]]: {{ug-Arab|[[ئامېرىكا قوشما شتاتلىرى]]}} (’amerika quşma ştatleri)
 * Uzbek: [[Amerika Qo'shma Shtatlari]]
 * Vietnamese: {{t+|vi|Hoa Kỳ|xs=Vietnamese}}, {{t|vi|Nước Mỹ|xs=Vietnamese}}, {{t|vi|Mỹ Quốc|xs=Vietnamese}} (''short forms''); {{t|vi|Hợp Chủng Quốc Hoa Kỳ|xs=Vietnamese}} (''long form''); {{t-|vi|HK|xs=Vietnamese}} (''abbr.''), {{t+|vi|Mỹ|xs=Vietnamese}} (''abbr.'')
