--- a/en/时/时.16926.wikitext
+++ b/en/时/时.16926.wikitext
@@ -27,8 +27,6 @@
 ===Hanzi===
 {{cmn-hanzi|tra=時|pin=[[shí]] ([[shi2]])|wg=shih<sup>2</sup>}}
 
-# {{defn|Mandarin}}
-
 ====Compounds====
 * [[时弊]]
 * [[时不常儿]]
@@ -98,6 +96,13 @@
 * [[时钟座]]
 * [[时装]]
 * [[时装表演]]
+
+==Mandarin==
+===Adverb===
+{{cmn-adv|s|pin=shí|pint=shi2|tra=時|rs=日03}}
+
+#[[when]]
+
 
 [[fr:时]]
 [[ko:时]]
