--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -5,12 +5,10 @@
 * {{audio|en-us-catch.ogg|Audio (US)}}
 *: {{rhymes|ætʃ}}, {{rhymes|ɛtʃ}}
 
-====Note====
-{{rfc-header|Note|lang=en}}
 The pronunciation /kɛtʃ/ started out as the unstressed variant of /kætʃ/ but has become the stressed pronunciation as well in many dialects.
 
 ===Etymology===
-From Old Norman French, from {{etyl|LL.}} {{term|captio|captiare|lang=la}} (ultimately from Latin {{term|capto|captare|lang=la}}).  Akin to [[w:French language|Modern French]] {{term|chasser|lang=fr}}, [[w:Spanish language|Spanish]] {{term|cazar|lang=es}}.
+From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{etyl|LL.|en}} {{term|captio|captiare|lang=la}}, from {{etyl|la|en}} {{term|capto|captare|lang=la}}).  Akin to [[w:French language|Modern French]] {{term|chasser|lang=fr}}, [[w:Spanish language|Spanish]] {{term|cazar|lang=es}}.
 
 ===Noun===
 {{en-noun|es|-}}
