t+es:[[bueno]] t+de:[[heiter]] t+de:[[schön]] t+de:[[toll]] t+es:[[despejado]] ([[WT:EDIT|Assisted]]) <beautiful#8218973>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -123,12 +123,14 @@
 * Dutch: {{t+|nl|mooi}}
 * Finnish: {{t+|fi|kaunis}}
 * French: {{t+|fr|beau|m}}
+* German: {{t|de|heiter}},  {{t|de|schön}}
 * Hebrew: [[נאה]] (na'e)
 * Hungarian: {{t+|hu|szép}}
 {{trans-mid}}
 * Italian: [[bel]] (''before "tempo"''); [[bello]] (''after "tempo"'')
 * Kurdish: {{ku-Arab|[[خۆش]]}}, {{ku-Arab|[[فێنک]]}}
 * [[Macedonian]]: {{t|mk|убаво|n|tr=úbavo}}
+* Spanish: {{t|es|bueno}},  {{t|es|despejado}}
 * Swedish: {{t+|sv|fint|n}}, {{t+|sv|vackert|n}}
 * [[Tamil]]: [[அழகிய]] (azhagiya)
 * [[Telugu]]: [[ఆహ్లాదకరమైన]]
@@ -143,6 +145,7 @@
 
 {{trans-top|ironic: how unfortunate}}
 * Finnish: {{t+|fi|loistava}}
+* German: {{t|de|toll}},  {{t|de|schön}}
 * Hungarian: {{t+|hu|szép}}
 {{trans-mid}}
 * [[Macedonian]]: {{t|mk|убаво|tr=úbavo}}
