--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -130,7 +130,7 @@
 * Italian: [[bel]] (''before "tempo"''); [[bello]] (''after "tempo"'')
 * Kurdish: {{ku-Arab|[[خۆش]]}}, {{ku-Arab|[[فێنک]]}}
 * [[Macedonian]]: {{t|mk|убаво|n|tr=úbavo}}
-* Spanish: {{t|es|bueno}},  {{t|es|despejado}}
+* Spanish: {{t|es|bueno}},  {{t|es|despejado}},  {{t|es|alegre}}
 * Swedish: {{t+|sv|fint|n}}, {{t+|sv|vackert|n}}
 * [[Tamil]]: [[அழகிய]] (azhagiya)
 * [[Telugu]]: [[ఆహ్లాదకరమైన]]
