--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -21,17 +21,15 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * Arabic: {{t|ar|نيوزيلاندا|f|tr=nyuzilánda}}
 * Armenian: {{t-|hy|Նոր Զելանդիա|tr=Nor Zelandia}}
 * Belarusian: {{t|be|Новая Зеландыя|f|tr=Nóvaja Zelándyja|xs=Belarusian}}, {{t|be|Новая Зэляндыя|f|tr=Nóvaja Zeljándyja|xs=Belarusian}} {{qualifier|Taraškevica orthography}}
-* Bosnian: {{t-|bs|Novi Zeland|m}}
-* [[Breton]]: [[Zeland-Nevez]]
+* [[Breton]]: {{t|br|Zeland-Nevez}}
 * Bulgarian: {{t|bg|Нова Зеландия|f|tr=Nóva Zelándija}}
 * Chinese:
 *: Mandarin: {{t-|cmn|新西蘭|sc=Hani}},  {{t-|cmn|新西兰|tr=Xīn-Xīlán|sc=Hani}},  {{qualifier|Taiwan}} {{t|cmn|紐西蘭|sc=Hani}},  {{t|cmn|纽西兰|tr=Niǔ-Xīlán|sc=Hani}}
-* Croatian: {{t-|hr|Novi Zeland|m}}
 * Czech: {{t-|cs|Nový Zéland|m}}
-* Danish: New Zealand
+* Danish: {{t|da|New Zealand}}
 * Dutch: {{t+|nl|Nieuw-Zeeland}}
 * Esperanto: {{t-|eo|Nov-Zelando|xs=Esperanto}}
-* Estonian: [[Uus-Meremaa]]
+* Estonian: {{t|et|Uus-Meremaa}}
 * Finnish: {{t+|fi|Uusi-Seelanti}}
 * French: {{t+|fr|Nouvelle-Zélande|f}}
 * German: {{t+|de|Neuseeland|n}}
@@ -39,8 +37,8 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * Hebrew: {{t|he|ניו זילנד|f|tr=niu ziland}}
 * Hungarian: {{t+|hu|Új-Zéland}}
 * Icelandic: {{t|is|Nýja-Sjáland|n}}
-* Indonesian: [[Selandia Baru]]
-* [[Interlingua]]: [[Nove Zelanda]]
+* Indonesian: {{t|id|Selandia Baru}}
+* [[Interlingua]]: {{t|ia|Nove Zelanda}}
 * Italian: {{t+|it|Nuova Zelanda|f}}
 * Japanese: {{t-|ja|ニュージーランド|tr=Nyūjīrando}}
 {{trans-mid}}
@@ -48,28 +46,28 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * [[Kamba]]: {{tø|kam|Nyuziland}}
 * [[Kikuyu]]: {{tø|ki|Nyuziland}}
 * Korean: {{t+|ko|뉴질랜드|tr=Nyujillaendeu|sc=Hang}}
-* Latin: [[Nova Zelandia]] {{f}}
+* Latin: {{t|la|Nova Zelandia|f}}
 * [[Luhya]]: {{tø|luy|Niuziland}}
 * [[Luo]]: {{tø|luo|Niuziland}}
 * [[Macedonian]]: {{t-|mk|Нов Зеланд|m|tr=Nov Zéland}}
 * Maltese: New Zealand
-* Maori: {{t-|mi|Aotearoa|xs=Maori}},  {{t|mi|Niu Tireni|xs=Maori}}
+* Maori: {{t-|mi|Aotearoa|xs=Maori}}, {{t|mi|Niu Tireni|xs=Maori}}
 * [[Meru]]: {{tø|mer|Nyuziland}},  {{tø|mer|Nyuziland}}
 * Norwegian: {{t+|no|New Zealand}}, {{t-|no|Ny-Zealand}}
 * Polish: {{t+|pl|Nowa Zelandia|f}}
 * Portuguese: {{t+|pt|Nova Zelândia|f}}
-* Romanian: [[Noua Zeelandă]] {{f}}
+* Romanian: {{t|ro|Noua Zeelandă|f}}
 * Russian: {{t+|ru|Новая Зеландия|f|tr=Nóvaja Zelándija}}
-* Serbian:
-*: Cyrillic: [[Нови Зеланд#Serbian|Нови Зеланд]] {{m}}
-*: Roman: [[Novi Zeland#Serbian|Novi Zeland]] {{m}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|Нови Зеланд|m|alt=Но̏вӣ Зѐланд|sc=Cyrl}}
+*: Roman: {{t|sh|Novi Zeland|m|alt=Nȍvī Zèland}}
 * Slovene: {{t+|sl|Nova Zelandija|f}}
 * Spanish: {{t|pt|Nueva Zelanda|f}}
 * Swahili: {{t+|sw|Nyuzilandi|xs=Swahili}}
 * Swedish: {{t+|sv|Nya Zeeland}}
 * Turkish: {{t+|tr|Yeni Zelanda}}
 * Ukrainian: {{t|uk|Нова Зеландія|f|tr=Nová Zelándija|xs=Ukrainian}}
-* Welsh: [[Seland Newydd]]
+* Welsh: {{t|cy|Seland Newydd}}
 {{trans-bottom}}
 
 ====Synonyms====
