t+bar:[[Deitschland]] ([[WT:EDIT|Assisted]]) <Germany#8224082>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -23,6 +23,7 @@
 * Arabic: {{t+|ar|ألمانيا|f|tr='almaanya}}
 * Armenian: {{t+|hy|Գերմանիա|tr=Germania}}
 * [[Azeri]]: {{t+|az|Almaniya|xs=Azeri}}
+* [[Bavarian]]: {{tø|bar|Deitschland}}
 * Belarusian: {{t|be|Германія|f|tr=Hermánija|xs=Belarusian}}
 * Bosnian: {{t-|bs|Njemačka|f}}
 * [[Breton]]: [[Alamagn]]
