--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -11,7 +11,7 @@
 *: {{rhymes|ɑːntʃ}}
 
 ===Etymology===
-From {{etyl|fro}} {{term|branche|lang=fro}}, from [[Vulgar Latin|Vulgar]] {{etyl|la}} {{term|branca||paw|lang=la}}, possibly from Gaulish *''vranca'', akin to [[Old Norse]] {{term|vró||angle, corner|lang=non}}, [[Lithuanian]] {{term|rankà||hand}}, [[Old Church Slavonic]] {{term|rǫka||hand}}, [[Albanian]] {{term|rangë||yard work}}.
+From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||paw|lang=la}}, possibly from Gaulish *''vranca'', akin to [[Old Norse]] {{term|vró||angle, corner|lang=non}}, [[Lithuanian]] {{term|rankà||hand}}, [[Old Church Slavonic]] {{term|rǫka||hand}}, [[Albanian]] {{term|rangë||yard work}}.
 
 ===Noun===
 {{en-noun|es}}
