iwiki +[[:br:pen]] <pen#8227399>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -302,6 +302,7 @@ English transcriptions of Chinese speech often fail to distinguish between the c
 
 [[am:pen]]
 [[ar:pen]]
+[[br:pen]]
 [[ca:pen]]
 [[de:pen]]
 [[el:pen]]
