--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -45,7 +45,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Catalan]]: [[França]] {{f}}
 * [[Cebuano]]: {{tø|ceb|Pransiya}}
 * Chinese:
-*: Mandarin: {{t-|cmn|法國|sc=Hani}},  {{t-|cmn|法国|tr=Fǎguó|sc=Hani}}, {{t|cmn|法蘭西|sc=Hani}},  {{t|cmn|法兰西|tr=Fǎlánxī|sc=Hani}}
+*: Mandarin: {{t-|cmn|法國|sc=Hani}}, {{t-|cmn|法国|tr=Fǎguó|sc=Hani}}, {{t|cmn|法蘭西|sc=Hani}},  {{t|cmn|法兰西|tr=Fǎlánxī|sc=Hani}}
 *: [[Min Nan]]: {{tø|nan|法國|tr=Hoat-kok}}
 *: Teochew: Huag8gog4
 * [[Cornish]]: [[Pow Frynk]]
@@ -102,7 +102,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Meru]]: {{tø|mer|Frans}}
 * Mongolian: {{t|mn|Франц|tr=Frants|sc=Cyrl|xs=Mongolian}}, {{t|mn|Франц улс|tr=Frants uls|sc=Cyrl|xs=Mongolian}}
 * Nauruan: {{t-|na|France|xs=Nauruan}}
-* Navajo: {{tø|nv|Dáághanii diné'i' bikéyah}}
+* Navajo: {{tø|nv|Dáághanii Dinéʼiʼ bikéyah}}
 * Norwegian: [[Frankrike]] (Franske Republikk, Republikken Frankrike)
 * [[Novial]]: [[Fransia]]
 * [[Occitan]]: [[França]]
@@ -119,10 +119,10 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Scots]]: [[Franse]]
 * [[Scottish Gaelic]]: An [[Fraing|Fhraing]]
 * Serbian:
-*: Cyrillic: [[Француска]] {{f}}
+*: Cyrillic: {{t|sr|Француска|f}}
 *: Roman: [[Francuska#Serbian|Francuska]] {{f}}
 * [[Sicilian]]: [[Francia]] {{f}}
-* Slovak: [[Francúzsko]],  {{t|sk|Francúzsko|n}}
+* Slovak: [[Francúzsko]], {{t|sk|Francúzsko|n}}
 * Slovene: {{t+|sl|Francija|f}}
 * [[Sotho]]: France
 * Spanish: {{t+|es|Francia|f}}
@@ -139,7 +139,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Võro]]: [[Prantsusmaa]]
 * Welsh: {{t-|cy|Ffrainc|f|xs=Welsh}}
 * [[West Frisian]]: [[Frankryk]]
-* Yiddish: {{t|yi|פֿראַנקרײַך|n|tr=Frankraykh|sc=yi-Hebr|xs=Yiddish}}
+* Yiddish: {{t|yi|פראנקרײך|alt=פֿראַנקרײַך|n|tr=Frankraykh|sc=yi-Hebr|xs=Yiddish}}
 {{trans-bottom}}
 
 ===See also===
