--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -102,7 +102,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Meru]]: {{tø|mer|Frans}}
 * Mongolian: {{t|mn|Франц|tr=Frants|sc=Cyrl|xs=Mongolian}}, {{t|mn|Франц улс|tr=Frants uls|sc=Cyrl|xs=Mongolian}}
 * Nauruan: {{t-|na|France|xs=Nauruan}}
-* Navajo: {{tø|nv|Dáághanii Dinéʼiʼ bikéyah}}
+* Navajo: {{tø|nv|Dáághahii Dinéʼiʼ bikéyah}}
 * Norwegian: [[Frankrike]] (Franske Republikk, Republikken Frankrike)
 * [[Novial]]: [[Fransia]]
 * [[Occitan]]: [[França]]
