--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -50,7 +50,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Czech: {{t+|cs|Izrael}}
 * Danish: {{t+|da|Israel}}
 * Dutch: {{t+|nl|Israël}}
-* Esperanto: {{t-|eo|Israelo|xs=Esperanto}},  {{t-|eo|Izraelo|xs=Esperanto}}
+* Esperanto: {{t-|eo|Israelo|xs=Esperanto}}, {{t-|eo|Izraelo|xs=Esperanto}}
 * Estonian: {{t-|et|Iisrael}}
 * Finnish: {{t+|fi|Israel}}
 * French: {{t+|fr|Israël}}
@@ -71,8 +71,8 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * [[Kikuyu]]: {{tø|ki|Israel}}
 * Korean: {{t+|ko|이스라엘|tr=Iseura-el|sc=Hang}}
 {{trans-mid}}
-* Latvian: {{t-|lv|Izraēla|xs=Latvian}},  {{t|lv|Izraēlas Valsts|xs=Latvian}}
-* Lithuanian: {{t+|lt|Izraelis|m|xs=Lithuanian}},  {{t|lt|Izraelio Valstybė|f|xs=Lithuanian}}
+* Latvian: {{t-|lv|Izraēla|xs=Latvian}}, {{t|lv|Izraēlas Valsts|xs=Latvian}}
+* Lithuanian: {{t+|lt|Izraelis|m|xs=Lithuanian}}, {{t|lt|Izraelio Valstybė|f|xs=Lithuanian}}
 * [[Livonian]]: [[Izraēl]], [[Jūdõmō]]
 * [[Luo]]: {{tø|luo|Israel}}
 * [[Macedonian]]: {{t-|mk|Израел|m|tr=Ízrael}}
@@ -80,7 +80,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * [[Mansoanka]]: {{tø|msw|Israeli}}
 * [[Marathi]]: [[इस्रायल]] (isrāyal)
 * [[Meru]]: {{tø|mer|Israel}}
-* Navajo: {{tø|nv|Ízrel Bikéyah}}
+* Navajo: {{tø|nv|Ízrel bikéyah}}
 * Norwegian: {{t+|no|Israel}}
 * [[Old Church Slavonic]]: [[Їздраил҄ь]]
 * [[Pashto]]: {{t|ps|اسرايل|sc=ps-Arab|xs=Pashto}}
@@ -89,18 +89,18 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Portuguese: {{t+|pt|Israel}}
 * Romanian: {{t-|ro|Israel|n}}
 * Russian: {{t+|ru|Израиль|m|tr=Izráil’}}
-* [[Samogitian]]: {{tø|bat-smg|Izraelės|m}},  {{tø|bat-smg|Izraele Valstībė|f}}
+* [[Samogitian]]: {{tø|bat-smg|Izraelės|m}}, {{tø|bat-smg|Izraele Valstībė|f}}
 * Sanskrit: {{t|sa|इस्रेल|xs=Sanskrit}}
 * [[Scottish Gaelic]]: {{t-|gd|Iosrael|f|xs=Scottish Gaelic}}
 * Serbian:
-*: Cyrillic: [[Израел]] {{m}}
+*: Cyrillic: {{t|sr|Израел|m}}
 *: Roman: [[Izrael]] {{m}}
 * Slovene: {{t+|sl|Izrael|m}}
 * Spanish: {{t+|es|Israel}}
 * Swahili: {{t+|sw|Israeli|xs=Swahili}}
 * Swedish: {{t+|sv|Israel}}
 * [[Tatar]]: {{t-|tt|İsrael|xs=Tatar}}
-* Thai: {{t|th|ประเทศอิสราเอล|tr=bprà-tâyt ìt-sà-răa-ayn}}
+* Thai: {{t|th|ประเทศอิสราเอล|tr=bpràtâyt ìtsàrăa-ayn}}
 * Turkish: {{t+|tr|İsrail}}
 * Ukrainian: [[Ізраїль]] (Izrajil’) {{m}}
 * Urdu: {{t-|ur|اسرائیل|xs=Urdu}}
