--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -42,6 +42,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 {{trans-mid}}
 * Kurdish: {{ku-Arab|[[په‌رده‌]]}}
 * [[Macedonian]]: {{t-|mk|завеса|f|tr=závesa}},  {{t|mk|перде|n|tr=pérde}}
+* Persian: {{t|fa|پرده|tr=pardeh}}
 * Portuguese: {{t+|pt|cortina|f}}
 * Russian: {{t+|ru|штора|f|tr=štóra}}, {{t+|ru|занавеска|f|tr=zanav'éska}}
 * Serbo-Croatian:
@@ -65,8 +66,9 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 * Italian: {{t-|it|sipario|m}}
 * Japanese: [[幕]] ([[まく]], maku), [[緞帳]] ([[どんちょう]], donchō) with vertical move, [[引き幕]]　([[ひきまく]] hikimaku) with horizontal move
 * [[Macedonian]]: {{t-|mk|кулиса|f|tr=kulísa}}
-* Portuguese: {{t+|pt|cortina|f}}
 {{trans-mid}}
+* Persian: {{t|fa|پرده|tr=pardeh}}
+* Portuguese: {{t+|pt|cortina|f}}
 * Russian: {{t+|ru|занавес|m|tr=zánav'es}}
 * Serbo-Croatian:
 *: Cyrillic: (''Ekavian'') {{tø|sh|завеса|f|alt=за̑веса|sc=Cyrl|xs=Serbo-Croatian}}, (''Ijekavian'') {{tø|sh|завјеса|f|alt=за̑вјеса|sc=Cyrl|xs=Serbo-Croatian}} ; {{tø|sh|застор|m|alt=за́стор|sc=Cyrl|xs=Serbo-Croatian}}
@@ -81,7 +83,6 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 {{checktrans-top}}
 * {{ttbc|Indonesian}}: [[serambi]], [[korden]], [[layar]]
 * {{ttbc|Kurdish}}: [[perde]] {{f}}
-* {{ttbc|Spanish}}: [[cortina]] {{f}}
 {{trans-bottom}}
 
 ===Verb===
