--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -62,7 +62,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Icelandic: {{t+|is|Ísrael}}
 * Indonesian: {{t-|id|Israel|xs=Indonesian}}
 * [[Interlingua]]: {{t-|ia|Israel|xs=Interlingua}}
-* Irish: {{t+|ga|Iosrael|xs=Irish}}
+* Irish: {{t+|ga|Iosrael|m|xs=Irish}}
 * Italian: {{t+|it|Israele}}
 * Japanese: {{t+|ja|イスラエル|tr=isuraeru}}
 * [[Kalenjin]]: {{tø|kln|Israel}}
