--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -65,7 +65,7 @@ Radical: [[日]] + [[正]]
 [[Category:zh-cn:Beginning Mandarin|shi4]]
 [[Category:zh-cn:Pronouns|shi4]]
 [[Category:zh-tw:Beginning Mandarin|日05]]
-[[Category:zh-tw:Pronouns|日05]]
+[[Category:Mandarin pronouns in traditional script|日05]]
 
 ----
 
