--- a/en/い/いぬ.3614.wikitext
+++ b/en/い/いぬ.3614.wikitext
@@ -1,7 +1,11 @@
 ==Japanese==
 ===Noun===
 {{ja-noun|h|rom=inu}}
-# {{ja-def|犬}} [[dog]]
+# {{ja-def|犬}} a [[dog]]
+#: '''犬'''に毎日えさをあげてください。
+#:: '''いぬ'''にまいにちえさをあげてください。
+#:: '''''Inu''' ni mainichi esa o agetekudasai.''
+#::: Please feed the '''dog''' every day.
 
 ===Verb===
 {{ja-verb|h|type=1|rom=inu}}
