t+he:[[זאת אומרת]] ([[WT:EDIT|Assisted]]) <i.e.#8256458>

--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -34,7 +34,7 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * French: {{t+|fr|c.-à-d.}}
 * German: [[d. h.]] {{i|[[das heißt]]}}
 * Greek: [[δηλαδή]], [[ήτοι]], [[τουτέστιν]]
-* Hebrew: {{t|he|דהיינו|tr=deháinu|sc=Hebr}},  {{t|he|כלומר|tr=klomár|sc=Hebr}}
+* Hebrew: {{t|he|דהיינו|tr=deháinu|sc=Hebr}},  {{t|he|כלומר|tr=klomár|sc=Hebr}},  {{t|he|זאת אומרת|tr=zót oméret|sc=Hebr}}
 {{trans-mid}}
 * Hungarian: [[azaz]]
 * Icelandic: [[þ.e.]] {{i|[[það]] [[er]]}}, [[þ.e.a.s.]] {{i|[[það]] [[er]] [[að]] [[segja]]}}
