--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -4,12 +4,17 @@
 {{en-noun}}
 
 # {{anatomy}} One of the great [[tendon]]s situated in each side of the [[ham]], or space back of the knee, and connected with the muscles of the back of the thigh.
+# {{informal}} The [[biceps femoris]] [[muscle]].
+#* '''2010''', Adam Garett, "Fried Hams", ''Reps!'' '''17''':23
+#*: You'd never dream of doing just bench presses to build a massive chest, or only lateral raises to build up your shoulders, so you'll surely limit your overall leg development if you restrict your '''hamstring''' training to leg curls.
 
 ====Translations====
 {{trans-top|One of the great tendons situated in each side of the ham, or space back of the knee}}
 * Finnish: {{t-|fi|kinnerjänne}}
 {{trans-mid}}
 {{trans-bottom}}
+
+{{trans-see|biceps femoris}}
 
 ===Verb===
 {{en-verb|hamstrings|hamstringing|hamstrung}}
