--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -6,7 +6,7 @@
 # {{anatomy}} One of the great [[tendon]]s situated in each side of the [[ham]], or space back of the knee, and connected with the muscles of the back of the thigh.
 # {{informal}} The [[biceps femoris]] [[muscle]].
 #* '''2010''', Adam Garett, "Fried Hams", ''Reps!'' '''17''':23
-#*: You'd never dream of doing just bench presses to build a massive chest, or only lateral raises to build up your shoulders, so you'll surely limit your overall leg development if you restrict your '''hamstring''' training to leg curls.
+#*: Developing muscle around both sides of a joint (think biceps and triceps, abs and low back, quads and '''hamstrings''') should be one of your primary training considerations because strength on each side leads to lower injury rates.
 
 ====Synonyms====
 * {{sense|biceps femoris}} [[hams]]
