trans link [[Macedonian]] <branch#8266136>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -52,7 +52,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Kurdish: {{ku-Arab|[[چرۆ]]}}, {{ku-Arab|[[لق]]}}
 {{trans-mid}}
 * Lithuanian: {{t+|lt|šaka|f|xs=Lithuanian}}
-* Macedonian: {{t|mk|гранка|n|tr=grànka|sc=Cyrl}}
+* [[Macedonian]]: {{t|mk|гранка|n|tr=grànka|sc=Cyrl}}
 * Polish: {{t+|pl|gałąź|f}}
 * Portuguese: {{t+|pt|galho|m}}
 * Romanian: {{t+|ro|ram|n}}, {{t+|ro|ramură|f}}
