--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -27,16 +27,18 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 * Bosnian: {{t-|bs|šafran|m}}
 * Bulgarian: {{t-|bg|шафран|m}}
 * Chinese: [[番紅花]] / [[番红花]] (fān hóng huā)
+* Esperanto: {{t|eo|safrano}}
 * Estonian: {{t+|et|safran}}
 * Finnish: {{t-|fi|maustesahrami}}
 * French: {{t+|fr|safran}}
 * Greek: {{t+|el|κρόκος|m|tr=krókos}}
 * Hindi: [[केसर]] (kesar) {{f}}
+* [[Ido]]: {{t|io|safrano}}
 * Italian: {{t+|it|zafferano|m}}
 * Japanese: [[サフラン]] (safuran)
 * Latin: [[safranum]]
-* Norwegian: {{t+|no|safran}}
 {{trans-mid}}
+* Norwegian: {{t+|no|safran}}
 * Persian: {{t-|fa|زعفران|tr=za,ferān|xs=Persian}}
 * Polish: {{t+|pl|szafran|m}}, {{t+|pl|krokus|m}}
 * Portuguese: {{t+|pt|açafrão|m}}
