--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -60,13 +60,15 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 * Bulgarian: {{t-|bg|шафран|m}}
 * Czech: {{t-|cs|šafrán|m}}
 * Dutch: {{t+|nl|saffraan}}
+* Esperanto: {{t|eo|safrano}}
 * Finnish: {{t-|fi|sahrami}}
 * French: {{t+|fr|safran}}
 * Greek: {{t+|el|κρόκος|m|tr=krókos}}, {{t+|el|ζαφορά|f|tr=zaforá}}
+* [[Ido]]: {{t|io|safrano}}
 * Italian: {{t+|it|zafferano|m}}
 * Japanese: [[サフラン]] (safuran)
-* Norwegian: {{t+|no|safran}}
 {{trans-mid}}
+* Norwegian: {{t+|no|safran}}
 * Persian: {{t-|fa|زعفران|tr=za,ferān|xs=Persian}}
 * Polish: {{t+|pl|szafran|m}}
 * Portuguese: {{t+|pt|açafrão|m}}
