--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -42,6 +42,7 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 * Persian: {{t-|fa|زعفران|tr=za,ferān|xs=Persian}}
 * Polish: {{t+|pl|szafran|m}}, {{t+|pl|krokus|m}}
 * Portuguese: {{t+|pt|açafrão|m}}
+* Romanian: {{t|ro|şofran|m}}
 * Russian: {{t+|ru|шафран|m|tr=šafrán}}
 * Sanskrit: [[कुङ्कुम]] [[kuṅkum]]
 * Serbian:
