--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -68,11 +68,12 @@ From {{etyl|fro}} {{term|safran|lang=fro}}, from {{etyl|ML.}} {{term|safranum|la
 * [[Ido]]: {{t|io|safrano}}
 * Italian: {{t+|it|zafferano|m}}
 * Japanese: [[サフラン]] (safuran)
-{{trans-mid}}
 * Norwegian: {{t+|no|safran}}
+{{trans-mid}}
 * Persian: {{t-|fa|زعفران|tr=za,ferān|xs=Persian}}
 * Polish: {{t+|pl|szafran|m}}
 * Portuguese: {{t+|pt|açafrão|m}}
+* Romanian: {{t|ro|şofran|m}}
 * Russian: {{t+|ru|шафран|m|tr=šafrán}}
 * Sanskrit: {{t|sa|केसर|n|xs=Sanskrit}}
 * Serbian:
