--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -39,6 +39,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * Icelandic: {{t|is|Nýja-Sjáland|n}}
 * Indonesian: {{t|id|Selandia Baru}}
 * [[Interlingua]]: {{t|ia|Nove Zelanda}}
+* Irish: {{t-|ga|Nua-Shéalainn|alt=An Nua-Shéalainn|f}}
 * Italian: {{t+|it|Nuova Zelanda|f}}
 * Japanese: {{t-|ja|ニュージーランド|tr=Nyūjīrando}}
 * [[Kalenjin]]: {{tø|kln|Nyuziland}}
@@ -51,6 +52,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * [[Luo]]: {{tø|luo|Niuziland}}
 * [[Macedonian]]: {{t-|mk|Нов Зеланд|m|tr=Nov Zéland}}
 * Maltese: New Zealand
+* Manx: {{t-|gv|Noa Heelan|f}}, {{t-|gv|Seelan Noa|alt=Yn Teelan Noa|f}}
 * Maori: {{t-|mi|Aotearoa|xs=Maori}}, {{t|mi|Niu Tireni|xs=Maori}}
 * [[Meru]]: {{tø|mer|Nyuziland}},  {{tø|mer|Nyuziland}}
 * Norwegian: {{t+|no|New Zealand}}, {{t-|no|Ny-Zealand}}
