t+tr:[[kesik]] t+tr:[[kesmek]] t+tr:[[kesim]] ([[WT:EDIT|Assisted]]) <cut#8278835>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -126,6 +126,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Italian: {{t+|it|taglio|m}}, {{t+|it|incisione|f}}
 * Kurdish: {{t+|ku|برین|sc=ku-Arab}}
 * Swedish: {{t+|sv|skärsår|n}}
+* Turkish: {{t|tr|kesik}}
 {{trans-bottom}}
 
 {{trans-top|act of cutting}}
@@ -164,6 +165,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 {{trans-mid}}
 * Italian: {{t+|it|alzata|f}}
 * Swedish: {{t-|sv|giv|c}}
+* Turkish: {{t|tr|kesmek}}
 {{trans-bottom}}
 
 {{trans-top|manner or style a garment is fashioned in}}
@@ -174,6 +176,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Finnish: {{t-|fi|leikkaus}}
 * German: {{t+|de|Schnitt|m}}
 * Italian: {{t+|it|taglia|f}}
+* Turkish: {{t|tr|kesim}}
 {{trans-bottom}}
 
 {{trans-top|lower than normal rate}}
