t+gd:[[bogha]] t-balance ([[WT:EDIT|Assisted]]) <curve#8283279>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -73,6 +73,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Italian: {{t+|it|curva|f}}
 * Polish: {{t|pl|zakręt|m}}
 * Russian: [[изгиб]] {{m}}, [[кривая]] {{f}}, [[поворот]] {{m}}
+* [[Scottish Gaelic]]: {{t|gd|bogha}}
 * Spanish: {{t+|es|curva|f}}
 * Swedish: {{t+|sv|kurva|c}}
 * [[Telugu]]: [[వంపు]] (vampu)
@@ -89,12 +90,13 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Finnish: {{t+|fi|kaari}}, {{t-|fi|käyrä}}
 * French: {{t+|fr|courbe|f}}
 * German: {{t+|de|Linie|f}}
-{{trans-mid}}
 * Greek: {{t+|el|καμπύλη|f|tr=kampíli}}
+{{trans-mid}}
 * Hungarian: {{t+|hu|görbe}}
 * Italian: {{t+|it|curva|f}}
 * Japanese: [[曲線]] ([[きょくせん]], kyokusen)
 * Russian: {{t|ru|кривая|f|tr=krivája}}
+* [[Scottish Gaelic]]: {{t|gd|bogha|f}}
 * Slovene: [[krivulja]] {{f}}
 * Spanish: {{t+|es|curva|f}}
 * Swedish: {{t+|sv|kurva|c}}
