--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -41,6 +41,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Croatian: {{t-|hr|grana|f}}
 * Czech: {{t-|cs|větev|f}}
 * Dutch: {{t+|nl|tak}}
+* Esperanto: {{t|eo|branĉo}}
 * Finnish: {{t+|fi|oksa}}
 * French: {{t+|fr|branche}}, {{t+|fr|rameau}}
 * Georgian: {{t-|ka|შტო|tr=što|sc=Geor|xs=Georgian}}
@@ -60,7 +61,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Serbian: [[грана]] (grana) {{f}}, [[вејка]] (vejka) {{f}} (leafless branch)
 * Slovak: {{t-|sk|vetva|f}}
 * Slovene: {{t+|sl|veja|f}}
-* Spanish: {{t+|es|ramo|m}}
+* Spanish: {{t+|es|ramo|m}},  {{t|es|rama|f}}
 * Swahili: {{t+|sw|tanzu|xs=Swahili}}
 * [[Tagalog]]: {{t-|tl|sanga|xs=Tagalog}}
 * [[Telugu]]: [[కొమ్మ]], [[శాఖ]]
