--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -71,7 +71,7 @@
 * Maltese: il-[[Ġermanja]] {{f}}
 * [[Manx]]: [[y Ghiarmaan]]
 * Mongolian: {{t|mn|Герман|tr=Germán|sc=Cyrl|xs=Mongolian}}
-* Navajo: {{tø|nv|Bééshbichʼahí}}
+* Navajo: {{tø|nv|Béésh Bichʼahii bikéyah}}
 * Norwegian: [[Tyskland]], [[Føderale Republikken Tyskland]]
 * Old English: {{t-|ang|Þēodiscland|n|xs=Old English}}
 * [[Old French]]: {{tø|fro|Alemaigne|f}}
