/* See also */ <Germany#8291406>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -110,7 +110,7 @@
 * [[Alsace|Alsatia]]
 * [[Austria]]
 * [[Bavaria]]
-* [[Appendix:Countries of the world|Countries of the world]]
+* [[Appendix:Countries of the world]]
 * [[Deutsch]]
 * [[Deutschland]]
 * [[Diets]], [[Dietsch]]
