--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -68,7 +68,7 @@
 {{trans-bottom}}
 
 ====See also====
-* [[Appendix:Countries of the world|Countries of the world]]
+* [[Appendix:Countries of the world]]
 
 [[Category:Countries]]
 
