--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -8,11 +8,100 @@ Old English ''[[sūcan]]''
 
 *: {{rhymes|ʌk}}
 
-EXAMPLE
+===Verb===
+{{en-verb}}
 
-"I thought Wikipedia sucked, but I gotta say, they really outdid themselves with Wiktionary. What a fucking waste of bandwidth."
+# To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]].
+# To draw into, by any means, with an attractive force, usually without direct contact. Used to describe the effect of  negative pressure allowing atmospheric pressure to push air in, as occurs with breathing, drinking and vacuum cleaning.
+# {{colloquial}} To be [[inferior]] or [[objectionable]]: a general term of disparagement, sometimes used with ''at'' to indicate a particular area of deficiency.
+#* '''1970''', [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America'', Simon and Schuster, pg. 251:
+#*: . . . and it has a few very high points . . . but as a novel, '''it sucks'''.
+# To perform [[fellatio]]; with ''off'' means to perform fellatio culminating in ejaculation.
 
-That's all you need to know. Now go use Dictionary.com, it doesn't have fucking "edit it yourself" bullshit that'll fuck you up if some asshole decides to edit everything to make it as incorrect as possible.
+====Synonyms====
+* (3, 4 above) To [[blow]]
+* See also [[Wikisaurus:give head]]
+
+====Antonyms====
+* (1, 2 above) To [[blow]]
+* (''to be poor at'') To [[rock]], to [[rule]]
+
+====Derived terms====
+{{rel-top3|Terms derived from ''suck'' (verb)}}
+* [[sucker]]
+{{rel-mid3}}
+* [[suck face]]
+{{rel-mid3}}
+* [[suck up]]
+{{rel-bottom}}
+
+====Related terms====
+* [[suckle]]
+
+====Translations====
+{{trans-top|to use the mouth to pull in liquid substances for ingestion or to perform a similar act on solid material without ingestion}}
+* Arabic: {{t+|ar|مص}}
+* Armenian: {{t-|hy|ծծել|tr=ççel}}
+* Bulgarian: {{t+|bg|смуча|tr=smuča}}
+* [[Catalan]]: [[xuclar]]
+* Czech: {{t-|cs|sát}}
+* Esperanto: {{t|eo|suĉi |xs=Esperanto}}
+* [[Ewe]]: [[nyi]]
+* Finnish: {{t+|fi|imeä}}
+* French: {{t+|fr|sucer}}
+* [[Galician]]: {{t-|gl|chupar|xs=Galician}}
+* German: {{t+|de|saugen}}
+* Hindi: {{t-|hi|चूसना|tr=cūsnā|xs=Hindi}}
+* Italian: [[succhiare]], [[suggere]]
+* Japanese: {{t|ja|吸う|tr=すう, suu}},  {{t|ja|しゃぶる|tr=shaburu}}
+* Korean: [[빨다]] (ppalda)
+* Kurdish: [[mêjîn]], [[mêtin]], {{ku-Arab|[[مژین]]}}
+{{trans-mid}}
+* Latin: {{t+|la|sugo}}
+* Lithuanian: {{t-|lt|čiulpti|alt=čiul̃pti|xs=Lithuanian}}
+* [[Macedonian]]: {{t-|mk|цица|tr=cíca}}
+* Norwegian: {{t-|no|suge}}
+* Persian: {{t+|fa|مکیدن|tr=makidan|xs=Persian}}
+* Polish: {{t+|pl|ssać}}
+* Portuguese: {{t-|pt|chupar}}, {{t+|pt|sugar}}
+* Romanian: {{t+|ro|suge}}
+* [[Romansch]]: {{t|rm|tschitschar|xs=Romansch}}
+* Russian: [[сосать]] (sosát’), [[всасывать]] (vsásyvat’)
+* Slovak: [[cmúľať]]
+* Spanish: {{t+|es|chupar}}
+* Swedish: {{t+|sv|suga}}
+* [[Tajik]]: {{t-|tg|макидан|tr=makidan|sc=Cyrl|xs=Tajik}}
+* [[Telugu]]: [[చీకు]] (cheeku)
+* Ukrainian: {{t-|uk|смоктати|sc=Cyrl|tr=smoktáty}}, {{t-|uk|ссати|sc=Cyrl|tr=ssáty}}
+{{trans-bottom}}
+
+{{trans-top|colloquial: term of general disparagement}}
+* Bulgarian: {{t+|bg|духам|tr=dukham}}
+* Finnish: {{t+|fi|imeä}}, {{t+|fi|haista}}
+* French: [[être]] [[chiant]]
+* German: [[mies]] [[sein]], [[zum]] [[kotzen|Kotzen]] [[sein]], [[Scheiße]] [[sein]]
+* Hindi: (laayak)
+{{trans-mid}}
+* Italian: [[essere una schiappa]], [[fare schifo]]
+* Norwegian: {{t-|no|suge}}
+* Portuguese: [[saco]] ''(vulgar)''
+* Russian: [[отстой]] (otstój) ''(noun)''
+* Swedish: {{t+|sv|suga}}
+{{trans-bottom}}
+
+{{trans-top|colloquial: with at, indicates a particular area of deficiency}}
+* Bulgarian: [[духам]] (dukham)
+* French: [[être]] [[chiant]] [[en]]
+* Hindi: (bakwaas)
+{{trans-mid}}
+* Italian: [[fare schifo a]]
+* Norwegian: {{t-|no|suge}}
+* Swedish: {{t+|sv|suga}}
+{{trans-bottom}}
+
+{{checktrans-top}}
+* {{ttbc|Slovak}}: (to ''suck'' a sweet) [[cmúľať]], (to ''suck in'' one’s breath) [[vtiahnuť]]
+{{trans-bottom}}
 
 ===Noun===
 {{en-noun}}
