/* Pronunciation */ uk <port#8296434>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -3,6 +3,7 @@
 
 ===Pronunciation===
 * {{IPA|/poʊɹt/|/pɔːɹt/|/pɔːt/}}, {{SAMPA|/poUr\t/|/pO:r\t/|/pO:t/}}
+* {{audio|en-uk-a port.ogg|Audio - 'a port' (UK)}}
 * {{audio|en-us-port.ogg|Audio (US)}}
 * {{rhymes|ɔː(r)t}}
 
