--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -16,7 +16,7 @@ Old English ''[[sūcan]]''
 # {{colloquial}} To be [[inferior]] or [[objectionable]]: a general term of disparagement, sometimes used with ''at'' to indicate a particular area of deficiency.
 #* '''1970''', [[w:Hunter S. Thompson|Hunter S. Thompson]], ''Fear and Loathing in America'', Simon and Schuster, pg. 251:
 #*: . . . and it has a few very high points . . . but as a novel, '''it sucks'''.
-
+# To perform [[fellatio]]; with ''off'' means to perform fellatio culminating in ejaculation.
 
 ====Synonyms====
 * (3, 4 above) To [[blow]]
