t+de:[[kommen]] t+de:[[ankommen]] ([[WT:EDIT|Assisted]]) <come#8341275>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -135,6 +135,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * Czech: {{t+|cs|přijít}}
 {{trans-mid}}
 * [[Galician]]: {{t+|gl|vir|xs=Galician}}
+* German: {{t|de|kommen}},  {{t|de|ankommen}}
 * [[Scottish Gaelic]]: {{t-|gd|thig|xs=Scottish Gaelic}}
 {{trans-bottom}}
 
