--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -107,6 +107,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-see|algebraic curve|[[algebraic curve#Translations|algebraic curve]]}}
 {{trans-top|informal: usually in plural: attractive features of a woman}}
 <!--Note: put INFORMAL translations in this table, where these exist-->
+* Danish: {{t|da|kurver|p}}
 * Finnish: {{t|fi|kurvit|p}}
 * Greek: {{t|el|καμπύλες|f|p|tr=kampíles}}
 * Hebrew: [[חיטובים]] (khit'uvym) {{m|p}}
