/* Translations */ corr gd <thunder#8345316>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -67,7 +67,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 * [[Romagnolo]]: [[tràun]] {{m}}
 * Romanian: {{t-|ro|tunet}}
 * Russian: {{t+|ru|гром|m|tr=grom}}
-* [[Scottish Gaelic]]: [[tàirneanach]] {{f}}
+* [[Scottish Gaelic]]: {{t|gd|tàirneanach|m}}
 * Serbian: {{t-|sr|grom}}, {{t-|sr|grmljavina}}
 * [[Sicilian]]: {{t-|scn|tronu|m|xs=Sicilian}}
 * Slovak: {{t-|sk|hrom}}
@@ -93,7 +93,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 {{trans-mid}}
 * Polish: {{t+|pl|grzmot|m}}
 * Russian: {{t+|ru|гром|m|tr=grom}}, {{t+|ru|грохот|m|tr=gróxot}}
-* [[Scottish Gaelic]]: [[tàirneanach]] {{f}}
+* [[Scottish Gaelic]]: {{t|gd|tàirneanach|m}}
 * Serbian: [[grmnjevit]], [[grmnjevito]], [[zagrmeti]]
 * Slovene: [[grmenje]] {{n}}
 * Swedish: [[åskmuller]] {{n}}, [[muller]] {{n}}, [[åskdån]] {{n}}, [[dån]] {{n}}
@@ -109,7 +109,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 {{trans-mid}}
 * Polish: {{t+|pl|grzmot|m}}
 * Russian: {{t+|ru|рокот|m|tr=rókot}}
-* [[Scottish Gaelic]]: [[tàirneanach]] {{f}}
+* [[Scottish Gaelic]]: {{t|gd|tàirneanach|m}}
 * Slovene: [[grmenje]] {{n}}
 * Spanish: {{t|es|estruendo|m}}
 * Swedish: [[mullrande]] {{n}}, [[dån]] {{n}}
