--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -30,7 +30,7 @@
 
 ====Translations====
 {{trans-top|to elect}}
-* Arabic: {{Arab|[[اختار]]}} (ixtāra)
+* Arabic: {{Arab|[[اختار]]}} (ixtāra),  {{t|ar|اختار|tr=ikhtaara|sc=Arab}}
 * Armenian: [[ընտրել]] (əntrel)
 * [[Basque]]: [[aukeratu]]
 * Bosnian: {{t-|bs|izabrati}}, {{t|bs|odabrati}}
@@ -49,31 +49,33 @@
 * German: {{t+|de|wählen}}
 * Greek: {{t+|el|εκλέγω}} (eklégo)
 * Hebrew: {{t-|he|בחר|tr=bakhár}}
-* Hindi: [[चुनना]]
+* Hindi: [[चुनना]],  {{t|hi|चुनना|tr=cunnā|sc=Deva}}
 * Hungarian: {{t-|hu|megválaszt}}
 * Icelandic: {{t+|is|velja}}
 * [[Ilocano]]: [[pili]]
 {{trans-mid}}
 * Indonesian: {{t+|id|memilih|xs=Indonesian}}, {{t+|id|pilih|xs=Indonesian}}
 * Italian: {{t+|it|eleggere}}
-* Japanese: [[選ぶ]] (えらぶ, erabu)
-* Korean: [[고르다]] (goreuda)
+* Japanese: [[選ぶ]] (えらぶ, erabu),  {{t|ja|選ぶ|tr=えらぶ, erabu|sc=Jpan}}
+* Korean: [[고르다]] (goreuda),  {{t|ko|고르다|tr=goreuda|sc=Kore}}
 * Latin: {{t-|la|eligo|alt=ēligo}}, {{t-|la|diligo|alt=dīligo}}
 * Latvian: [[izvēlēties]]
 * {{trreq|Lithuanian}}
 * Maltese: {{t+|mt|ħatar|xs=Maltese}}, {{t+|mt|talla'|xs=Maltese}}
+* Mandarin: {{t|zh|選舉|sc=Hani}},  {{t|zh|选举|tr=xuǎnjǔ|sc=Hani}}
 * Mongolian: {{t|mn|сонгох|tr=songoh|sc=Cyrl|xs=Mongolian}}
 * Persian: {{t|fa|برگزیدن|xs=Persian}}
 * Polish: {{t+|pl|wybierać}}, {{t+|pl|wybrać}}
 * Portuguese: {{t+|pt|escolher}}
 * Romanian: {{t+|ro|alege}}
-* Russian: {{t+|ru|выбирать|tr=výbirat’}}
+* Russian: {{t+|ru|выбирать|tr=výbirat’}},  {{t|ru|выбрать|tr=výbrat’
+|sc=Cyrl}}
 * Serbian: {{t-|sr|izabrati}}, {{t|sr|odabrati}}
 * Slovene: [[izvoliti]]
 * Spanish: {{t+|es|elegir}}
 * Swedish: {{t+|sv|välja}}
 * [[Tagalog]]: [[pili]]
-* Thai: {{Thai|[[เลือก]]}} (lêuak), {{Thai|[[คัดเลือก]]}} (kát lêuak)
+* Thai: {{Thai|[[เลือก]]}} (lêuak), {{Thai|[[คัดเลือก]]}} (kát lêuak),  {{t|th|เลือก|tr=lêuak|sc=Thai}},  {{t|th|คัดเลือก|tr=kát lêuak|sc=Thai}}
 * Turkish: {{t+|tr|seçmek}}
 * Yiddish: [[קלײַבן]] (klaybn), [[אויסקלײַבן]] (oysklaybn)
 {{trans-bottom}}
@@ -101,6 +103,7 @@
 * Italian: {{t+|it|scegliere}}, {{t+|it|selezionare}}
 * Japanese: {{t-|ja|選ぶ}} ({{t-|ja|えらぶ}}, erabu)
 * Maltese: {{t+|mt|għażel|xs=Maltese}}
+* Mandarin: {{t|zh|選擇|sc=Hani}},  {{t|zh|选择|tr=xuǎnzé|sc=Hani}},  {{t|zh|挑選|sc=Hani}},  {{t|zh|挑选|tr=tiāoxuǎn|sc=Hani}}
 * Maori: {{t-|mi|whiri|xs=Maori}}
 * Portuguese: {{t+|pt|escolher}}
 * Romanian: {{t+|ro|alege}}
@@ -126,8 +129,10 @@
 * German: {{t|de|entscheiden}}
 * [[Ilocano]]: [[pili]]
 * Maltese: {{t+|mt|iddeċieda|xs=Maltese}}
+* Mandarin: {{t|zh|決定|sc=Hani}},  {{t|zh|决定|tr=juédìng|sc=Hani}}
 * Portuguese: {{t+|pt|escolher}},  {{t+|pt|escolher|m}}
 * Romanian: {{t-|ro|vrea}}, {{t+|ro|prefera}}
+* Russian: {{t|ru|решать|tr=rešát'|sc=Cyrl}},  {{t|ru|решить|tr=rešít'|sc=Cyrl}}
 * Serbian: {{t-|sr|odlučiti}}, {{t|sr|odabrati}}
 * Spanish: {{t+|es|escoger}},  {{t+|es|elegir}}
 {{trans-bottom}}
