--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -30,13 +30,14 @@
 
 ====Translations====
 {{trans-top|to elect}}
-* Arabic: {{Arab|[[اختار]]}} (ixtāra),  {{t|ar|اختار|tr=ikhtaara|sc=Arab}}
+* Arabic: {{t|ar|اختار|tr=ikhtaara|sc=Arab}}
 * Armenian: [[ընտրել]] (əntrel)
 * [[Basque]]: [[aukeratu]]
 * Bosnian: {{t-|bs|izabrati}}, {{t|bs|odabrati}}
 * Bulgarian: {{t|bg|избирам}}
 * [[Catalan]]: [[escollir]], [[elegir]], [[triar]]
-* Chinese: [[選舉]], [[选举]] (xuǎnjǔ)
+* Chinese:
+*: Mandarin: {{t|zh|選舉|sc=Hani}},  {{t|zh|选举|tr=xuǎnjǔ|sc=Hani}}
 * Croatian: {{t-|hr|izabrati}}, {{t|hr|odabrati}}
 * Czech: {{t-|cs|volit}}, {{t-|cs|zvolit}}
 * Danish: [[vælge]], [[kåre]]
@@ -56,43 +57,42 @@
 {{trans-mid}}
 * Indonesian: {{t+|id|memilih|xs=Indonesian}}, {{t+|id|pilih|xs=Indonesian}}
 * Italian: {{t+|it|eleggere}}
-* Japanese: [[選ぶ]] (えらぶ, erabu),  {{t|ja|選ぶ|tr=えらぶ, erabu|sc=Jpan}}
-* Korean: [[고르다]] (goreuda),  {{t|ko|고르다|tr=goreuda|sc=Kore}}
+* Japanese: {{t-|ja|選ぶ|tr=えらぶ, erabu|sc=Jpan}}
+* Korean:  {{t|ko|고르다|tr=goreuda|sc=Kore}}
 * Latin: {{t-|la|eligo|alt=ēligo}}, {{t-|la|diligo|alt=dīligo}}
 * Latvian: [[izvēlēties]]
 * {{trreq|Lithuanian}}
 * Maltese: {{t+|mt|ħatar|xs=Maltese}}, {{t+|mt|talla'|xs=Maltese}}
-* Mandarin: {{t|zh|選舉|sc=Hani}},  {{t|zh|选举|tr=xuǎnjǔ|sc=Hani}}
 * Mongolian: {{t|mn|сонгох|tr=songoh|sc=Cyrl|xs=Mongolian}}
 * Persian: {{t|fa|برگزیدن|xs=Persian}}
 * Polish: {{t+|pl|wybierać}}, {{t+|pl|wybrać}}
 * Portuguese: {{t+|pt|escolher}}
 * Romanian: {{t+|ro|alege}}
-* Russian: {{t+|ru|выбирать|tr=výbirat’}},  {{t|ru|выбрать|tr=výbrat’
-|sc=Cyrl}}
+* Russian: {{t+|ru|выбирать|tr=výbirat’|sc=Cyrl}} {{impf}},  {{t|ru|выбрать|tr=výbrat’|sc=Cyrl}} {{pf}}
 * Serbian: {{t-|sr|izabrati}}, {{t|sr|odabrati}}
 * Slovene: [[izvoliti]]
 * Spanish: {{t+|es|elegir}}
 * Swedish: {{t+|sv|välja}}
 * [[Tagalog]]: [[pili]]
-* Thai: {{Thai|[[เลือก]]}} (lêuak), {{Thai|[[คัดเลือก]]}} (kát lêuak),  {{t|th|เลือก|tr=lêuak|sc=Thai}},  {{t|th|คัดเลือก|tr=kát lêuak|sc=Thai}}
+* Thai: {{t|th|เลือก|tr=lêuak|sc=Thai}},  {{t|th|คัดเลือก|tr=kát lêuak|sc=Thai}}
 * Turkish: {{t+|tr|seçmek}}
 * Yiddish: [[קלײַבן]] (klaybn), [[אויסקלײַבן]] (oysklaybn)
 {{trans-bottom}}
 
 {{trans-top|to pick}}
-* Arabic: {{Arab|[[اختار]]}} (ixtāra)
+* Arabic: {{t|ar|اختار|tr=ikhtaara|sc=Arab}}
 * Armenian: [[ընտրել]] (əntrel)
 * Bosnian: {{t-|bs|izabrati}}, {{t|bs|odabrati}}
 * Bulgarian: {{t|bg|подбирам}},  {{t|bg|предпочитам}}
 * [[Catalan]]: [[elegir]]
-* Chinese: [[選擇]], [[选择]] (xuǎnzé)
+* Chinese:
+*: Gan: {{tø|gan|簡|sc=Hani}}, {{tø|gan|简|tr=gan3|sc=Hani}}
+*: Mandarin: {{t|zh|選擇|sc=Hani}},  {{t|zh|选择|tr=xuǎnzé|sc=Hani}},  {{t|zh|挑選|sc=Hani}},  {{t|zh|挑选|tr=tiāoxuǎn|sc=Hani}}
 * Croatian: {{t-|hr|izabrati}}, {{t|hr|odabrati}}
 * Danish: [[udvælge]], [[vælge]], [[foretrække]]
 * Dutch: {{t+|nl|kiezen}}, {{t+|nl|uitkiezen}}
 * Finnish: {{t+|fi|valita}}
 * French: {{t+|fr|choisir}}
-* Gan: {{tø|gan|簡|tr=gan3|sc=Hans}}
 * Georgian: {{t-|ka|ამორჩევა|tr=amorčeva|sc=Geor|xs=Georgian}}
 * German: {{t+|de|auswählen}}, {{t+|de|wählen}}
 * Greek: {{t+|el|διαλέγω}} (dialégo)
@@ -101,25 +101,26 @@
 * Hungarian: {{t+|hu|kiválaszt}}
 * [[Ilocano]]: [[pili]]
 * Italian: {{t+|it|scegliere}}, {{t+|it|selezionare}}
-* Japanese: {{t-|ja|選ぶ}} ({{t-|ja|えらぶ}}, erabu)
+* Japanese: {{t-|ja|選ぶ|tr=えらぶ, erabu|sc=Jpan}}
+* Korean:  {{t|ko|고르다|tr=goreuda|sc=Kore}}
 * Maltese: {{t+|mt|għażel|xs=Maltese}}
-* Mandarin: {{t|zh|選擇|sc=Hani}},  {{t|zh|选择|tr=xuǎnzé|sc=Hani}},  {{t|zh|挑選|sc=Hani}},  {{t|zh|挑选|tr=tiāoxuǎn|sc=Hani}}
 * Maori: {{t-|mi|whiri|xs=Maori}}
 * Portuguese: {{t+|pt|escolher}}
 * Romanian: {{t+|ro|alege}}
-* Russian: {{t+|ru|выбирать|tr=výbirat’}}
+* Russian: {{t+|ru|выбирать|tr=výbirat’|sc=Cyrl}} {{impf}},  {{t|ru|выбрать|tr=výbrat’|sc=Cyrl}} {{pf}}
 * Serbian: {{t-|sr|izabrati}}, {{t|sr|odabrati}}
 * Slovene: {{t+|sl|izbrati}}
 * Spanish: {{t+|es|escoger}}
 * Swedish: {{t+|sv|välja}}
 * [[Tagalog]]: [[pili]]
-* Thai: {{Thai|[[เลือก]]}} (lêuak), {{Thai|[[คัดเลือก]]}} (kát lêuak)
+* Thai: {{t|th|เลือก|tr=lêuak|sc=Thai}},  {{t|th|คัดเลือก|tr=kát lêuak|sc=Thai}}
 {{trans-bottom}}
 
 {{trans-top|to decide to act in a certain way}}
 * Bosnian: {{t-|bs|odlučiti}}, {{t|bs|odabrati}},
 * Bulgarian: {{t|bg|решавам}}
-* Chinese: [[決定]], [[決定]] (jué dìng)
+* Chinese:
+*: Mandarin: {{t|zh|決定|sc=Hani}},  {{t|zh|决定|tr=juédìng|sc=Hani}}
 * Croatian: {{t-|hr|odlučiti}}, {{t|hr|odabrati}}
 * Danish: [[foretrække]], [[have lyst]], [[finde for godt]]
 * Dutch: {{t+|nl|kiezen}}
@@ -129,10 +130,9 @@
 * German: {{t|de|entscheiden}}
 * [[Ilocano]]: [[pili]]
 * Maltese: {{t+|mt|iddeċieda|xs=Maltese}}
-* Mandarin: {{t|zh|決定|sc=Hani}},  {{t|zh|决定|tr=juédìng|sc=Hani}}
 * Portuguese: {{t+|pt|escolher}},  {{t+|pt|escolher|m}}
 * Romanian: {{t-|ro|vrea}}, {{t+|ro|prefera}}
-* Russian: {{t|ru|решать|tr=rešát'|sc=Cyrl}},  {{t|ru|решить|tr=rešít'|sc=Cyrl}}
+* Russian: {{t|ru|решать|tr=rešát'|sc=Cyrl}} {{impf}},  {{t|ru|решить|tr=rešít'|sc=Cyrl}} {{pf}}
 * Serbian: {{t-|sr|odlučiti}}, {{t|sr|odabrati}}
 * Spanish: {{t+|es|escoger}},  {{t+|es|elegir}}
 {{trans-bottom}}
