--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -50,7 +50,7 @@
 * German: {{t+|de|wählen}}
 * Greek: {{t+|el|εκλέγω}} (eklégo)
 * Hebrew: {{t-|he|בחר|tr=bakhár}}
-* Hindi: [[चुनना]],  {{t|hi|चुनना|tr=cunnā|sc=Deva}}
+* Hindi: {{t|hi|चुनना|tr=cunnā|sc=Deva}}
 * Hungarian: {{t-|hu|megválaszt}}
 * Icelandic: {{t+|is|velja}}
 * [[Ilocano]]: [[pili]]
@@ -98,6 +98,7 @@
 * German: {{t+|de|auswählen}}, {{t+|de|wählen}}
 * Greek: {{t+|el|διαλέγω}} (dialégo)
 * Hebrew: {{t-|he|בחר|tr=bakhár}}
+* Hindi: {{t|hi|चुनना|tr=cunnā|sc=Deva}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|kiválaszt}}
 * [[Ilocano]]: [[pili]]
