--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -68,7 +68,7 @@
 * Polish: {{t+|pl|wybierać}}, {{t+|pl|wybrać}}
 * Portuguese: {{t+|pt|escolher}}
 * Romanian: {{t+|ro|alege}}
-* Russian: {{t+|ru|выбирать|tr=výbirat’|sc=Cyrl}} {{impf}},  {{t|ru|выбрать|tr=výbrat’|sc=Cyrl}} {{pf}}
+* Russian: {{t+|ru|выбирать|tr=výbirat’|sc=Cyrl}} {{impf}},  {{t|ru|выбрать|tr=výbrat’|sc=Cyrl}} {{pf}},  {{t|ru|избирать|tr=izbirát’|sc=Cyrl}},  {{t|ru|избрать|tr=izbrát’|sc=Cyrl}}
 * Serbian: {{t-|sr|izabrati}}, {{t|sr|odabrati}}
 * Slovene: [[izvoliti]]
 * Spanish: {{t+|es|elegir}}
