--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -73,7 +73,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 * Turkish: {{t+|tr|Yeni Zelanda}}
 * Ukrainian: {{t|uk|Нова Зеландія|f|tr=Nová Zelándija|xs=Ukrainian}}
 * Urdu: {{t|ur|نیوزی لینڈ|sc=ur-Arab}}
-* Vietnamese: {{t|vi|New Zealand}}
+* Vietnamese: {{t|vi|New Zealand}},  {{t|vi|Tân Tây Lan}}
 * Welsh: {{t|cy|Seland Newydd}}
 {{trans-bottom}}
 
