--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -174,7 +174,7 @@
 
 ==Middle Chinese==
 ===Han character===
-'''地''' (*[[dhì]])<!--note: asterisk indicates that this character appears more than four times in the Tang Dynasty corpus of literature-->
+'''地''' (*dhì)<!--note: asterisk indicates that this character appears more than four times in the Tang Dynasty corpus of literature-->
 
 ----
 
