/* Middle Chinese */unlinking reconstructed terms,  using [[Project:AWB|AWB]] <映#8353060>

--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -67,7 +67,7 @@
 ==Middle Chinese==
 
 ===Han character===
-'''映''' (*[[qiæ̀ng]])<!--note: asterisk indicates that this character occurs more than four times in the Tang Dynasty corpus of literature-->
+'''映''' (*qiæ̀ng)<!--note: asterisk indicates that this character occurs more than four times in the Tang Dynasty corpus of literature-->
 
 # {{defn|Middle Chinese|sort=日05}}
 
