--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -35,7 +35,9 @@
 #: ''I was so surprised that I couldn't '''speak''' a word.''
 #* '''1611''', ''[[w:Authorized King James Version|Authorized King James Version]]'' (Bible translation), [[w:Book of Jeremiah|Jeremiah]] 9:5:
 #*: And they will deceive every one his neighbour, and will not speak the truth: they have taught their tongue to '''speak''' lies, and weary themselves to commit iniquity.
-# {{intransitive|of a dog}} To [[bark]] once or more times, specially when [[order]]ed to do so.
+# {{transitive}} To [[communicate]] (some fact or feeling); to [[bespeak]], to [[indicate]].
+#*'''1851''', Herman Melville, ''Moby-Dick'':
+#*:There he sat, his very indifference '''speaking''' a nature in which there lurked no civilized hypocrisies and bland deceits.
 
 ====Synonyms====
 * [[articulate]]
