--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -64,7 +64,7 @@
 ===Hanja===
 {{ko-hanja|hangeul=지|rv=ji|mr=chi|eumhun=땅|ehrv=ttang|ehmr=ttang|ehy=ttang}}
 
-# ([[땅]] 지, ''ttang-''): [[earth]], [[land]], [[ground]] 
+# ([[땅]] 지, ''ttang-''): [[earth]], [[land]], [[ground]]
 # ([[지위]] 지, ''jiwi-''): [[status]], [[rank]]
 
 ====Compounds====
@@ -173,8 +173,11 @@
 ----
 
 ==Middle Chinese==
+
 ===Han character===
 '''地''' (*dhì)<!--note: asterisk indicates that this character appears more than four times in the Tang Dynasty corpus of literature-->
+
+# {{defn|Middle Chinese}}
 
 ----
 
