--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -66,7 +66,7 @@ From {{etyl|nl}} '''[[Nieuw-Zeeland]]''', "new Zeeland", after the Dutch settlem
 *: Cyrillic: {{t|sh|Нови Зеланд|m|alt=Но̏вӣ Зѐланд|sc=Cyrl}}
 *: Roman: {{t|sh|Novi Zeland|m|alt=Nȍvī Zèland}}
 * Slovene: {{t+|sl|Nova Zelandija|f}}
-* Spanish: {{t|pt|Nueva Zelanda|f}}
+* Spanish: {{t|es|Nueva Zelanda|f}}
 * Swahili: {{t+|sw|Nyuzilandi|xs=Swahili}}
 * Swedish: {{t+|sv|Nya Zeeland}}
 * Thai: {{t|th|ประเทศนิวซีแลนด์|tr=bpràtêt niw-seelaen|sc=Thai}},  {{t|th|นิวซีแลนด์|tr=niw-seelaen|sc=Thai}}
