--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -43,6 +43,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, a Bib
 * Bosnian: {{t-|bs|Izrael|m}}
 * [[Breton]]: {{t-|br|Israel|xs=Breton}}
 * Bulgarian: {{t+|bg|Израел|m|tr=Izrael}}
+* Burmese: {{t|my|အစ္စရေး|sc=Mymr}}
 * [[Catalan]]: {{t-|ca|Israel|m}}
 * Chinese:
 *: Mandarin: {{t-|cmn|以色列|tr=Yǐsèliè|sc=Hani}}
