t+my:[[ပြင်သစ်နိုင်ငံ]] t-balance ([[WT:EDIT|Assisted]]) <France#8370224>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -42,6 +42,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Bosnian: {{t-|bs|Francuska|f}}
 * [[Breton]]: [[Frañs]] ''(state)'', [[Bro-C'hall]] ''(country)''
 * Bulgarian: {{t+|bg|Франция|f|tr=Fráncija}}
+* Burmese: {{t|my|ပြင်သစ်နိုင်ငံ|sc=Mymr}}
 * [[Catalan]]: [[França]] {{f}}
 * [[Cebuano]]: {{tø|ceb|Pransiya}}
 * Chinese:
@@ -83,8 +84,8 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Kikuyu]]: {{tø|ki|Frans}}
 * Korean: {{t+|ko|프랑스|tr=Peurangseu|sc=Hang}}
 * Kurdish: {{ku-Arab|[[فه‌ره‌نسا]]}}
-* Lao: {{t|lo|ປະເທດຝະລັ່ງ|sc=Laoo|xs=Lao}}
 {{trans-mid}}
+* Lao: {{t|lo|ປະເທດຝະລັ່ງ|sc=Laoo|xs=Lao}}
 * Latin: {{t+|la|Gallia|f}},  {{t+|la|Francia}}
 * Latvian: {{t+|lv|Francija|f|xs=Latvian}}
 * [[Limburgish]]: [[Frankriek]]
