trans link [[Lao]], trans link [[Nauruan]] <France#8370266>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -85,7 +85,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Korean: {{t+|ko|프랑스|tr=Peurangseu|sc=Hang}}
 * Kurdish: {{ku-Arab|[[فه‌ره‌نسا]]}}
 {{trans-mid}}
-* Lao: {{t|lo|ປະເທດຝະລັ່ງ|sc=Laoo|xs=Lao}}
+* [[Lao]]: {{t|lo|ປະເທດຝະລັ່ງ|sc=Laoo|xs=Lao}}
 * Latin: {{t+|la|Gallia|f}},  {{t+|la|Francia}}
 * Latvian: {{t+|lv|Francija|f|xs=Latvian}}
 * [[Limburgish]]: [[Frankriek]]
@@ -102,7 +102,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * [[Marathi]]: {{t|mr|फ्रांस|sc=Deva|xs=Marathi}}
 * [[Meru]]: {{tø|mer|Frans}}
 * Mongolian: {{t|mn|Франц|tr=Frants|sc=Cyrl|xs=Mongolian}}, {{t|mn|Франц улс|tr=Frants uls|sc=Cyrl|xs=Mongolian}}
-* Nauruan: {{t-|na|France|xs=Nauruan}}
+* [[Nauruan]]: {{t-|na|France|xs=Nauruan}}
 * Navajo: {{tø|nv|Dáághahii Dinéʼiʼ bikéyah}}
 * Norwegian: [[Frankrike]] (Franske Republikk, Republikken Frankrike)
 * [[Novial]]: [[Fransia]]
@@ -149,6 +149,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 
 [[Category:Countries]]
 [[Category:France|*]]
+
 ----
 
 ==French==
