--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -73,7 +73,7 @@ From {{etyl|fro}} ''[[coster]]'' (modern: ''[[coûter]]'').
 {{en-verb|costs|costing|cost}}
 
 # To [[incur]] a [[charge]], a [[price]].
-===Pronounciation===
+===Pronunciation===
 
 * {{audio|En-uk-to cost.ogg|Audio (UK)}}
 
