t+pt:[[cortado]] t-balance t+pt:[[reduzido]] t+pt:[[carvado]] ([[WT:EDIT|Assisted]]) <cut#8385783>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -35,6 +35,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * French: {{t+|fr|coupé}}, {{t+|fr|coupée}}, {{t+|fr|coupés}}, {{t+|fr|coupées}}
 * German: {{t+|de|geschnitten}}
 * Hebrew: {{t|he|חתוך|tr=khatúkh}}
+* Portuguese: {{t|pt|cortado|m}}
 * Swedish: [[klippt]], [[skuren]]
 {{trans-bottom}}
 
@@ -42,6 +43,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Finnish: {{t-|fi|leikattu}}, {{t|fi|vähennetty}}, {{t|fi|kevennetty}}, {{t|fi|heikennetty}}
 {{trans-mid}}
 * German: {{t+|de|geschnitten}}
+* Portuguese: {{t|pt|reduzido|m}}
 {{trans-bottom}}
 
 {{trans-top|of a gem, carved into a shape}}
@@ -50,6 +52,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 {{trans-mid}}
 * French: {{t+|fr|taillé}}
 * German: {{t+|de|geschnitten}}, {{t+|de|geschliffen}}
+* Portuguese: {{t|pt|carvado|m}}
 {{trans-bottom}}
 
 {{trans-top|in cricket, played with a horizontal bat}}
