--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -128,6 +128,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Hebrew: {{t|he|חתך|m|tr=khétekh}}
 * Italian: {{t+|it|taglio|m}}, {{t+|it|incisione|f}}
 * Kurdish: {{t+|ku|برین|sc=ku-Arab}}
+* Portuguese: {{t|pt|corte|m}}
 * Swedish: {{t+|sv|skärsår|n}}
 * Turkish: {{t|tr|kesik}}
 {{trans-bottom}}
@@ -140,6 +141,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 {{trans-mid}}
 * Hebrew: {{t|he|חיתוך|m|tr=khitúkh}}
 * Italian: {{t+|it|taglio|m}}
+* Portuguese: {{t|pt|cortar}},  {{t|pt|corte|m}},  {{t|pt|corte|m}}
 * Swedish: {{t+|sv|snitt|n}}
 * Turkish: {{t|tr|kesme}}
 {{trans-bottom}}
@@ -150,6 +152,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * German: {{t+|de|Schnitt|m}}
 {{trans-mid}}
 * Italian: {{t+|it|taglio|m}}
+* Portuguese: {{t|pt|corte|m}}
 * Swedish: {{t+|sv|snitt|n}}
 {{trans-bottom}}
 
@@ -188,6 +191,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 {{trans-mid}}
 * French: {{t+|fr|baissé}}, {{t+|fr|diminué}}
 * Italian: {{t+|it|riduzione|f}}
+* Portuguese: {{t|pt|redução|m}}
 {{trans-bottom}}
 
 {{trans-top|slab of meat}}
