--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -78,8 +78,8 @@ Or, 晶 is the sound. (?)
 * [[星暦]], [[星歴]]
 * [[星人]]
 {{bottom2}}
-* [[流星]]
-* [[感性]]
+* [[流星]] りゅうせい
+* [[感性]] かんせい
 * [[明星]] みょうじょう
 [[Category:1000 Japanese basic words|ほし]]
 [[Category:ja:Astronomy|ほし]]
