--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -254,7 +254,10 @@ From late {{etyl|non|da}} {{term|penni|lang=non}}, from {{etyl|la|da}} {{term|pe
 ===Pinyin syllable===
 '''pen'''
 
-# A transliteration of any of a number of Chinese characters properly represented as having one of four tones, [[pēn]], [[pén]], [[pěn]], or [[pèn]].
+# {{nonstandard spelling of|[[pēn]]}}
+# {{nonstandard spelling of|[[pén]]}}
+# {{nonstandard spelling of|[[pěn]]}}
+# {{nonstandard spelling of|[[pèn]]}}
 
 ====Usage notes====
 English transcriptions of Chinese speech often fail to distinguish between the critical tonal differences employed in the Chinese language, using words such as this one without the appropriate indication of tone.
