--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -4,7 +4,7 @@
 [[Image:Olea_europaea1.jpg|thumb|''Olea europaea'' (1)]]
 
 ===Etymology===
-From {{etyl|fro}} {{term|olive||olive tree|lang=fro}}, from {{etyl|la|en}} {{term|oliva|olīva|olive|lang=la}}, from {{etyl|grc|en}} {{term|ἐλαία|sc=polytonic|tr=elaia|lang=grc}}, itself probably a borrowing from the same Mediterranean source, which also gave Old Armenian {{term|իւղ|եւղ|oil|tr=ewł|lang=xcl}}.<ref>{{grc-Beekes}}</ref>
+{{etyl|fro}} {{term|olive}} 'olive tree', from {{etyl|la|en}} {{term|oliva|olīva|lang=la}} 'olive', from {{etyl|grc|en}} {{term|ἐλαία|sc=polytonic|tr=elaía|lang=grc}}, from [[Indo-European]] *{{term|loiu̯om}}; akin to [[Old Church Slavonic]] ''lojŭ'' 'tallow' and {{etyl|xcl}} {{term|իւղ|եւղ|tr=ewł|lang=xcl}} 'oil'.<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref>
 
 ===Pronunciation===
 * {{enPR|ŏ'lĭv}}, {{IPA|/ˈɒlɪv/}}, {{SAMPA|/"QlIv/}}
