--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -124,6 +124,7 @@ From {{etyl|fro}} {{term|cortine}}, from {{etyl|la}} {{term|cortina}}.
 [[hu:curtain]]
 [[ml:curtain]]
 [[nl:curtain]]
+[[ja:curtain]]
 [[no:curtain]]
 [[oc:curtain]]
 [[pl:curtain]]
