--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -302,6 +302,7 @@ From {{etyl|enm|en}}, from {{etyl|xno|en}} {{term|cachier||lang=xno}}, from {{et
 * Japanese: {{t-|ja|捕まえる|tr=tsukamaeru}},  {{t|ja|捕る|tr=toru}}
 * Korean: {{t+|ko|잡다|tr=japda|sc=Hang}}
 * Persian: {{t+|fa|گرفتن|tr=geraftan|xs=Persian}}
+* Romanian: {{t|ro|prinde}}
 * Russian: {{t|ru|поймать|tr=pojmát'}} {{pf}},  {{t+|ru|ловить|tr=lovít'}} {{impf}}
 * Slovene: [[ujeti]]
 * Spanish: [[atajar]] (''Latin America''), [[cazar]] (''football'')
