t+ar:[[شغل]] ([[WT:EDIT|Assisted]]) <play#8426578>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -372,6 +372,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-bottom}}
 
 {{trans-top|use a device to hear (a recording)}}
+* Arabic: {{t|ar|شغل|alt=شَغَّلَ|sc=Arab}}
 * Armenian: {{t|hy|նվագարկել|tr=nvagarkel}}
 * Chinese: [[放]] (fàng)
 * Czech: {{t+|cs|hrát}}
