t+ar:[[دور]] ([[WT:EDIT|Assisted]]) <play#8426617>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -163,6 +163,7 @@ Old English ''[[pleġa]]'', ''plæġa''
 {{trans-bottom}}
 
 {{trans-top|action carried out when it is one's turn to play}}
+* Arabic: {{t|ar|دور|alt=دَوْر|sc=Arab}}
 * Finnish: {{t-|fi|siirto}}, {{t+|fi|peli}}
 {{trans-mid}}
 * [[Macedonian]]: {{t-|mk|потег|m|tr=póteg}}
