--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -2,6 +2,9 @@
 [[Image:Aldabra.giant.tortoise.arp.jpg|thumb|A tortoise]]
 ==English==
 
+===Etymology===
+{{term|tortue}}, from {{etyl|VL.}} {{term|tartaruca}}, from {{etyl|LL.}} {{term|tartaruchus||of Tartarus}}, from Greek{{attention|grc}}{{attention|el}} {{term|||sc=Grek|tr=tartarouchos|from Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from hell
+
 ===Pronunciation===
 * {{audio|en-us-tortoise.ogg|Audio (US)}}
 
@@ -10,10 +13,7 @@
 ===Noun===
 {{en-noun}}
 
-# Any of various land-dwelling [[reptile]]s, of [[family]] ''[[Testudinidae]]'', whose body is enclosed in a [[shell]] ([[carapace]] plus [[plastron]]).  The animal can [[withdraw]] its head and four legs partially into the shell, providing some [[protection]] from [[predator]]s.
-
-==Origin==
-tortue, from Vulgar Latin tartaruca, from Late Latin tartaruchus ‘of Tartarus’, from Greek tartarouchos, from Tartaros ‘Tartarus, the land of the dead in ancient stories’; because it used to be thought that tortoises and turtles came from hell
+# Any of various land-dwelling [[reptile]]s, of [[family]] ''[[Testudinidae]]'', whose body is enclosed in a [[shell]] ([[carapace]] plus [[plastron]]). The animal can [[withdraw]] its head and four legs partially into the shell, providing some [[protection]] from [[predator]]s.
 
 ====Translations====
 {{trans-top|land-dwelling reptile}}
