--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -3,6 +3,7 @@
 ==English==
 
 ===Etymology===
+{{attention|la}}
 {{term|tortue}}, from {{etyl|VL.}} {{term|tartaruca}}, from {{etyl|LL.}} {{term|tartaruchus||of Tartarus}}, from Greek{{attention|grc}}{{attention|el}} {{term|||sc=Grek|tr=tartarouchos|from Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from hell
 
 ===Pronunciation===
