--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -73,7 +73,7 @@
 
 ====Translations====
 {{trans-top|apply force to (something) so it comes towards one}}
-* Arabic: {{Arab|[[جر]]}} (járra)
+* Arabic: {{Arab|[[جر]]}} (járra),  {{t|ar|جر|tr=járra|sc=Arab}},  {{t|ar|سحب|tr=sáHaba|sc=Arab}}
 * Armenian: {{t-|hy|քաշել|tr=k'ašel}}, {{t-|hy|ձգել|tr=jgel}}
 * [[Catalan]]: {{t+|ca|tirar}}
 * Chinese:
@@ -88,8 +88,8 @@
 * German: {{t+|de|ziehen}}
 * Hungarian: {{t+|hu|húz}}
 * Italian: [[tirare]] [[:it:tirare|(it)]]
-* Japanese: {{t|ja|引く|tr=ひく, hiku|sc=Jpan}}
 {{trans-mid}}
+* Japanese: {{t|ja|引く|tr=ひく, hiku|sc=Jpan}}
 * Korean: {{t|ko|끌다|tr=kkeulda|sc=Kore}}, {{t|ko|뽑다|tr=ppopda|sc=Kore}}
 * Kurdish: {{ku-Arab|[[ڕاکێشه‌]]}}
 * Latin: {{t-|la|vello}},  {{t+|la|traho}}
