--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -73,7 +73,7 @@
 
 ====Translations====
 {{trans-top|apply force to (something) so it comes towards one}}
-* Arabic: {{Arab|[[جر]]}} (járra),  {{t|ar|جر|tr=járra|sc=Arab}},  {{t|ar|سحب|tr=sáHaba|sc=Arab}}
+* Arabic: {{t|ar|جر|tr=járra|sc=Arab}},  {{t|ar|سحب|tr=sáHaba|sc=Arab}}
 * Armenian: {{t-|hy|քաշել|tr=k'ašel}}, {{t-|hy|ձգել|tr=jgel}}
 * [[Catalan]]: {{t+|ca|tirar}}
 * Chinese:
