--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -56,7 +56,7 @@
 # {{defn|Mandarin|sort=心08}}
 
 * '''Style''': [[Traditional Chinese]]
-** '''[[Simplified Chinese|Simplified]] equivalent''': <font lang="zh>[[恶]]</font>
+** '''[[Simplified Chinese|Simplified]] equivalent''': {{Hans|[[恶]]}}
 
 ----
 
