--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -134,6 +134,14 @@ From {{etyl|la|es}} {{term|liber|lang=la}}
 *Hiligaynon: {{l|hil|libre}}
 *Tagalog: {{l|tl|libre}}
 
+===Verb===
+{{es-verb-form|librar}}
+ 
+# {{es-verb form of|ending=ar|mood=imperative|pers=2|formal=yes|number=singular|[[librar]]}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=1|number=singular|[[librar]]}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=2|formal=yes|number=singular|[[librar]]}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=3|number=singular|[[librar]]}}
+
 ----
 
 ==Tagalog==
