/* French */ conj, {{attention}} <butter#8450509>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -298,7 +298,7 @@ From {{etyl|ang}} {{term|butere|lang=ang}}, from West Germanic, from Latin {{ter
 ----
 
 ==French==
-
+{{attention|fr}}
 ===Etymology===
 From ''[[butte#French|butte]]''.
 
@@ -313,6 +313,9 @@ From ''[[butte#French|butte]]''.
 #:* I don't understand.
 # (Slang) To [[kill]] someone.
 #* ''Je vais le '''butter''', ce mec.''
+
+====Conjugation====
+{{fr-conj-er|butt|avoir}}
 
 ----
 
