/* Readings */ correct readings table <均#8456744>

--- a/en/均/均.13002.wikitext
+++ b/en/均/均.13002.wikitext
@@ -32,7 +32,7 @@
 # [[equally]]
 
 ====Readings====
-* {{ja-readings|on=[[きん]] (kin), [[いん]] (in), [[うん]] (un)|kun=[[ととのえる]] (totonoeru), [[ひとしい]] (hitoshii)|nadzuke=[[お]] (o), [[ただ]] (tada), [[なお]] (nao), [[なり]] (nari), [[ひとし]] (hitoshi), [[ひら]] (hira), [[まさ]] (masa)}}
+* {{ja-readings|on=[[きん]] (kin), [[うん]] (un)|kanyoon=[[いん]] (in)|kun=[[ならす]] (narasu)|nanori=[[ひとし]] (hitoshi)|nazuke=[[お]] (o), [[ただ]] (tada), [[なお]] (nao), [[なり]] (nari), [[ひら]] (hira), [[まさ]] (masa)}}
 
 ====Compounds====
 {{top4}}
