t+tr:[[sarışın]] ([[WT:EDIT|Assisted]]) <blonde#8466191>

--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -57,6 +57,7 @@ In the English language, it is one of only a few distinct words where the gender
 {{trans-mid}}
 * Esperanto: {{t-|eo|blonda|xs=Esperanto}}
 * French: {{t+|fr|blonde}}
+* Turkish: {{t|tr|sarışın}}
 {{trans-bottom}}
 
 {{trans-top|having a blonde or gold appearance}}
