/* French */ wikify, correct <blonde#8484384>

--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -107,16 +107,19 @@ In the English language, it is one of only a few distinct words where the gender
 * {{IPA|lang=fr|/blɔ̃d/}}, {{SAMPA|lang=fr|/blO~d/}}
 
 ===Adjective===
-{{infl|fr|adjective|g=f}}
+{{infl|fr|adjective form|g=f}}
 
-# of [[light]] [[colour]], mostly said about light hair colour, but also possible about [[beer]] and [[wood]].
+# {{feminine of|blond|lang=fr}}.
 
 ===Noun===
-{{infl|fr|noun}} {{m}}/{{f}}
+{{fr-noun|f}}
 
-# Person with blonde hair; blonde
-'''blonde''' {{f}}
+# [[blonde]], female with blonde hair
+# [[light]] [[beer]]
 # {{Canada|slang|lang=fr}} [[girlfriend]]
+
+===Related terms====
+*[[bière blonde]]
 
 ----
 
