t+uz:[[gaplashmoq]] ([[WT:EDIT|Assisted]]) <speak#8511136>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -134,6 +134,7 @@
 * Turkish: {{t+|tr|konuşmak}}
 * Ukrainian: {{t-|uk|говорити|tr=hovorýty|xs=Ukrainian}},  {{t|uk|розмовляти|tr=rozmovljáty|xs=Ukrainian}}
 * Urdu: {{t-|ur|بولنا|tr=bolnā|xs=Urdu}}
+* Uzbek: {{t|uz|gaplashmoq}}
 * Vietnamese: {{t+|vi|nói|xs=Vietnamese}}
 * [[West Frisian]]: {{t-|fy|sprekke|xs=West Frisian}}
 * Yiddish: {{t+|yi|רעדן|tr=redn|sc=yi-Hebr|xs=Yiddish}}
