sorted prolog, trans link [[Old Irish]] <vomit#8514407>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -1,5 +1,4 @@
 {{wikipedia}}
-
 {{also|vomît}}
 ==English==
 
@@ -47,7 +46,7 @@ From {{etyl|la}} ''[[vomitare]]''.
 * [[Macedonian]]: {{t-|mk|повраќа|tr=póvraḱa}},  {{t-|mk|блуе|tr=blúe}}
 * Maltese: [[irrimetta]] {{m}}, [[irrimettat]] {{f}}, [[qala']] {{m}}, [[qalgħat]] {{f}}
 * Norwegian: {{t+|no|kaste opp}}
-* Old Irish: {{tø|sga|sceid|xs=Old Irish}}
+* [[Old Irish]]: {{tø|sga|sceid|xs=Old Irish}}
 * Polish: {{t-|pl|wymiotować}}
 * Portuguese: {{t+|pt|vomitar}}
 * Romanian: {{t-|ro|vomita}}, {{t+|ro|borî}}
