t+is:[[skurður]] t+is:[[afskurður]] t-balance t+is:[[skera]] t+is:[[klippa]] t+is:[[troða]] t+is:[[skera niður]] t+is:[[skrópa]] t+is:[[skipta]] t+is:[[draga]] ([[WT:EDIT|Assisted]]) <cut#8517231>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -126,6 +126,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * German: {{t+|de|Schnitt|m}}
 * Hebrew: {{t|he|חתך|m|tr=khétekh}}
 {{trans-mid}}
+* Icelandic: {{t|is|skurður|m}}
 * Italian: {{t+|it|taglio|m}}, {{t+|it|incisione|f}}
 * Kurdish: {{t+|ku|برین|sc=ku-Arab}}
 * Portuguese: {{t+|pt|corte|m}}
@@ -140,6 +141,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * German: {{t+|de|schneiden|m}}
 * Hebrew: {{t|he|חיתוך|m|tr=khitúkh}}
 {{trans-mid}}
+* Icelandic: {{t|is|skurður|m}}
 * Italian: {{t+|it|taglio|m}}
 * Portuguese: {{t+|pt|corte|m}}
 * Swedish: {{t+|sv|snitt|n}}
@@ -150,6 +152,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Danish: {{t-|da|snit|n}}
 * Finnish: [[leikkaus]], [[viilto]], [[sivallus]], [[haava]]
 * German: {{t+|de|Schnitt|m}}
+* Icelandic: {{t|is|afskurður|m}}
 {{trans-mid}}
 * Italian: {{t+|it|taglio|m}}
 * Portuguese: {{t+|pt|corte|m}}
@@ -292,6 +295,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * German: {{t+|de|einschneiden}}
 * Hebrew: {{t|he|חתך|tr=khatákh}}
 {{trans-mid}}
+* Icelandic: {{t|is|skera}}
 * Italian: {{t+|it|tagliare}},  {{t+|it|incidere}}
 * Japanese: {{t+|ja|切る}} ({{t+|ja|きる}}, kiru)
 * Latin: {{t|la|inseco}},  {{t-|la|incido}}
@@ -322,6 +326,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * German: {{t+|de|schneiden}}
 {{trans-mid}}
 * Hebrew: {{t|he|חתך|tr=khatákh}}
+* Icelandic: {{qualifier|with a knife}} {{t|is|skera}},  {{qualifier|with scissors}} {{t|is|klippa}}
 * Irish: {{t-|ga|bain|xs=Irish}} {{i|grass, hay, etc.}}
 * Italian: {{t+|it|tagliare}}
 * Japanese: {{t+|ja|切る}} ({{t+|ja|きる}}, kiru)
@@ -350,8 +355,9 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Armenian: {{t-|hy|կտրել|tr=ktrel}}
 * Danish: [[snyde]]
 * Finnish: {{t-|fi|etuilla}}
-* Japanese: {{t+|ja|横切る}} ({{t+|ja|よこぎる}}, yokogiru)
+* Icelandic: {{t|is|troða|alt=troðast}},  {{t|is|troða|alt=troða sér}}
 {{trans-mid}}
+* Japanese: {{t+|ja|横切る}} ({{t+|ja|よこぎる}}, yokogiru)
 * Portuguese: {{t+|pt|furar}}
 * Spanish: {{t+|es|colar}}
 * Swedish: [[tränga]] sig
@@ -372,8 +378,9 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * Bulgarian: {{t|bg|орязвам}}
 * Danish: [[skære]], [[beskære]], [[nedsætte]]
 * Finnish: {{t+|fi|leikata}}
-{{trans-mid}}
 * German: {{t+|de|beschneiden}}
+{{trans-mid}}
+* Icelandic: {{t|is|skera niður}}
 * Japanese: {{t+|ja|減らす}} ({{t+|ja|へらす}}, herasu), {{t+|ja|削減する}} ({{t+|ja|さくげんする}}, sakugen suru), {{t+|ja|カットする}} (katto suru)
 * Portuguese: {{t+|pt|diminuir}},  {{t|pt|reduzir}}
 * Spanish: {{t-|es|recortar}}
@@ -409,6 +416,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 * French: {{t+|fr|sécher}}
 * Hebrew: {{t|he|הבריז|tr=hivríz}}
 {{trans-mid}}
+* Icelandic: {{t|is|skrópa}}
 * Japanese: {{t+|ja|サボる}} ({{t+|ja|さぼる}}, saboru)
 * Portuguese: {{t+|pt|matar}}, {{t+|pt|faltar}}
 * Spanish: {{t+|es|faltar}}
@@ -423,6 +431,7 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 {{trans-top|to divide a pack of playing cards}}
 * French: {{t+|fr|couper}}
 * German: {{t+|de|schneiden}}
+* Icelandic: {{t|is|skipta}},  {{t|is|skera}},  {{t|is|draga}}
 {{trans-mid}}
 * Italian: {{t+|it|alzare}}
 * Portuguese: {{t+|pt|cortar}}
