--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -9,7 +9,7 @@
 
 ===Etymology 1===
 
-{{etyl|enm}} {{term|penne|penne||lang=enm}} "enclosure for animals" from {{etyl|ang}} {{term|penn|penn-||lang=ang}} (in compounds) "enclosure" from {{proto|Germanic|penn-|to bolt, pin, nail, secure|lang=en}} from {{proto|Indo-European|bend-|pointed peg, nail, edge|lang=en}}. Akin to {{ang}} {{term|pennian|pennian|to close, lock, bolt|lang=ang}}, {{etyl|nds|-}} {{term|pennen|pennen|to secure a door with a bolt|lang=nds}}, {{ang}} {{term|pinn|pinn|peg, bolt|lang=ang}}. More at [[pin]].
+{{etyl|enm}} {{term|penne|penne||lang=enm}} "enclosure for animals" from {{etyl|ang}} {{term|penn|penn-||lang=ang}} (in compounds) "enclosure" from {{proto|Germanic|penn-|to bolt, pin, nail, secure|lang=en}} from {{proto|Indo-European|bend-|pointed peg, nail, edge|lang=en}}. Akin to {{ang}} {{term|pennian|-pennian||lang=ang}} (in compounds) "to close, lock, bolt" (cf {{term|onpennian|onpennian||lang=ang}} "to open"), {{etyl|nds|-}} {{term|pennen|pennen|to secure a door with a bolt|lang=nds}}, {{ang}} {{term|pinn|pinn|peg, bolt|lang=ang}}. More at [[pin]].
 
 ====Noun====
 {{en-noun}}
