/* French */ {{rfv-sense}} <butter#8566542>

--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -314,7 +314,7 @@ From ''[[butte#French|butte]]''.
 #* ''La raison '''butte''' sur le concept du bien et du mal.''
 #* ''Là, je '''butte'''.''
 #:* I don't understand.
-# (Slang) To [[kill]] someone.
+# {{slang|lang=fr}} {{rfv-sense}} To [[kill]] someone.
 #* ''Je vais le '''butter''', ce mec.''
 
 ====Conjugation====
