t+ro:[[tuna]] ([[WT:EDIT|Assisted]]) <thunder#8572461>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -162,6 +162,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunara}} < *þen, from
 {{trans-mid}}
 * Polish: [[grzmieć]], [[zagrzmieć]]
 * Portuguese: [[trovoar]], [[trovejar]]
+* Romanian: {{t|ro|tuna}}
 * Russian: [[греметь]] (gr'em'ét’), [[грохотать]] (groχotát’)
 * Slovene: [[grmeti]]
 * Swedish: [[dundra]], [[dåna]]
