iwiki +[[:ko:count]] <count#8574879>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -208,6 +208,7 @@ From {{etyl|fro}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}.
 [[fa:count]]
 [[fr:count]]
 [[gl:count]]
+[[ko:count]]
 [[hr:count]]
 [[io:count]]
 [[it:count]]
