--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -247,6 +247,8 @@ ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|g
 #: ''The football player '''cut''' to his left to evade a tackle.''
 # To [[divide]] a [[pack]] of [[playing card]]s into two
 #: ''If you '''cut''' then I'll deal.''
+# (slang) To [[dilute]] a liquid, usually alcohol.
+#: ''The bartender '''cuts''' his beer to save money and now it's all watery.''
 
 ====Troponyms====
 * [[chop]]
