--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -52,6 +52,10 @@ Strong conjugation of {{term|heat}}
 * [[aan het]]
 * [[hetzelfde]]
 
+===See also===
+* [[de]]
+* [[een]]
+
 ===Pronoun===
 '''het'''
 
@@ -65,12 +69,7 @@ Strong conjugation of {{term|heat}}
 #: ''Ik hoop het.'' &mdash; I hope so.
 #: ''Ik doe het als jij het wilt.'' &mdash; I'll do it if you want me to.
 #: ''Het meisje heeft honger, geef het een boterham.'' &mdash; The girl is hungry, give her a sandwich.
-
-===Indefinite pronoun===
-{{rfc-header|Indefinite pronoun|lang=nl}}
-'''het'''
-
-# [[it]]
+# ''Impersonal pronoun:'' [[it]]
 #: ''Het regent alweer.'' &mdash; It's raining again.
 #: ''Hoe gaat het?'' &mdash; How are you?
 #: ''Wat geeft het?'' &mdash; What does it matter?
@@ -78,11 +77,9 @@ Strong conjugation of {{term|heat}}
 #: ''Het zij zo.'' &mdash; So be it.
 #: ''Ik doe het wat rustig aan.'' &mdash; I'm taking it easy.
 
-===See also===
-* [[de]]
-* [[een]]
+====Declension====
+{{nl-decl-personal pronouns}}
 
-[[Category:Dutch indefinite pronouns]]
 [[Category:Dutch personal pronouns]]
 
 ----
