t+ja:[[曲線]] t+zh:[[曲線]] t+zh:[[曲线]] ([[WT:EDIT|Assisted]]) <curve#8646677>

--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -95,7 +95,8 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Greek: {{t+|el|καμπύλη|f|tr=kampíli}}
 * Hungarian: {{t+|hu|görbe}}
 * Italian: {{t+|it|curva|f}}
-* Japanese: [[曲線]] ([[きょくせん]], kyokusen)
+* Japanese: [[曲線]] ([[きょくせん]], kyokusen),  {{t|ja|曲線|tr=きょくせん, kyokusen|sc=Jpan}}
+* Mandarin: {{t|zh|曲線|sc=Hani}},  {{t|zh|曲线|tr=qūxiàn|sc=Hani}}
 * Russian: {{t|ru|кривая|f|tr=krivája}}
 * [[Scottish Gaelic]]: {{t-|gd|bogha|f|xs=Scottish Gaelic}},  {{t|gd|lùb|f|xs=Scottish Gaelic}}
 * Slovene: [[krivulja]] {{f}}
