--- a/en/c/curve.7392.wikitext
+++ b/en/c/curve.7392.wikitext
@@ -62,6 +62,8 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * [[Afrikaans]]: [[kurwe]]
 * Bulgarian: {{t|bg|извивка|f}}
 * [[Catalan]]: revolt, {{m}}
+* Chinese:
+*: Mandarin: {{t|zh|曲線|sc=Hani}},  {{t|zh|曲线|tr=qūxiàn|sc=Hani}}
 * Dutch: [[curve]] {{f}}, [[kromming]] {{f}}, [[bocht]] {{m}} (''road'')
 * Esperanto: [[kurbo]], [[kurbiĝo]], [[sinuo]], [[ĝirejo]], [[vojturno]] (''road'')
 * Finnish: {{t-|fi|kaarre}},  {{t+|fi|kurvi}},  {{t+|fi|mutka}}
@@ -71,8 +73,9 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 {{trans-mid}}
 * Hebrew: {{he-translation|עקימה|'aqima}} {{f}}
 * Italian: {{t+|it|curva|f}}
+* Japanese: {{t|ja|曲線|tr=きょくせん, kyokusen|sc=Jpan}}
 * Polish: {{t|pl|zakręt|m}}
-* Russian: {{t+|ru|изгиб|m}}, {{t+|ru|кривая|f}}, {{t+|ru|поворот|m}}
+* Russian: {{t+|ru|изгиб|m|tr=izgíb}}, {{t+|ru|кривая|f|tr=krivája}}, {{t+|ru|поворот|m|tr=povorót}}
 * [[Scottish Gaelic]]: {{t-|gd|bogha|xs=Scottish Gaelic}},  {{t|gd|lùb|f|xs=Scottish Gaelic}}
 * Spanish: {{t+|es|curva|f}}
 * Swedish: {{t+|sv|kurva|c}}
@@ -84,6 +87,8 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * [[Afrikaans]]: [[kurwe]]
 * Bulgarian: {{t|bg|крива|f}}
 * [[Catalan]]: corba, f
+* Chinese:
+*: Mandarin: {{t|zh|曲線|sc=Hani}},  {{t|zh|曲线|tr=qūxiàn|sc=Hani}}
 * Czech: {{t-|cs|křivka|f}}
 * Danish: {{t-|da|kurve|c}}
 * Dutch: {{t+|nl|curve|f}}, {{t-|nl|kromme|f}}
@@ -95,8 +100,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Greek: {{t+|el|καμπύλη|f|tr=kampíli}}
 * Hungarian: {{t+|hu|görbe}}
 * Italian: {{t+|it|curva|f}}
-* Japanese: [[曲線]] ([[きょくせん]], kyokusen),  {{t|ja|曲線|tr=きょくせん, kyokusen|sc=Jpan}}
-* Mandarin: {{t|zh|曲線|sc=Hani}},  {{t|zh|曲线|tr=qūxiàn|sc=Hani}}
+* Japanese: {{t|ja|曲線|tr=きょくせん, kyokusen|sc=Jpan}}
 * Russian: {{t|ru|кривая|f|tr=krivája}}
 * [[Scottish Gaelic]]: {{t-|gd|bogha|f|xs=Scottish Gaelic}},  {{t|gd|lùb|f|xs=Scottish Gaelic}}
 * Slovene: [[krivulja]] {{f}}
@@ -127,7 +131,7 @@ From {{etyl|la}} {{term|curvus||lang=la|bent, curved}}
 * Greek: {{t+|el|καμπύλη|f|tr=kampíli}}
 {{trans-mid}}
 * Italian: [[curva]] {{f}} (''usually plural'')
-* Russian: [[изгибы]] {{p}},  {{t|ru|изгибы|m|p|tr=izgíby|sc=Cyrl}}
+* Russian: {{t+|ru|изгиб|m|tr=izgíb}} (usually plural: {{t|ru|изгибы|m|p|tr=izgíby|sc=Cyrl}})
 * Spanish: {{t-|es|curvas|f}}
 * Swedish: [[kurva]] {{c}} (''usually plural''), [[figur]] {{c}} (''usually singular'')
 * [[Telugu]]: [[వంపులు]] (vampulu), [[వొంపులు]] (vompulu)
