iwiki +[[:no:chose]] <chose#8671365>

--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -67,6 +67,7 @@ Compare Italian {{term|cosa|lang=it}}, Portuguese {{term|coisa|lang=pt}}, Spanis
 [[lt:chose]]
 [[hu:chose]]
 [[ja:chose]]
+[[no:chose]]
 [[ru:chose]]
 [[simple:chose]]
 [[fi:chose]]
