--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -77,6 +77,9 @@
 # A tool, originally made from a [[feather]] but now usually a small tubular instrument, containing ink used to [[write]] or make marks.
 #: ''He took notes with a '''pen'''.''
 # {{zoology}} The internal [[cartilage]] skeleton of a [[squid]], shaped like a pen.
+# {{context|now|_|rare|poetic|dialectal}} A [[feather]], especially one of the flight feathers of a bird, angel etc.
+#*'''1590''', Edmund Spendser, ''The Faerie Queene'', I.xi:
+#*:And eke the '''pennes''', that did his pineons bynd, / Were like mayne-yards, with flying canuas lynd, / With which whenas him list the ayre to beat [...].
 
 =====Related terms=====
 {{top2}}
