--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -4,7 +4,7 @@
 {{rank|real|eye|sun|496|cut|everything|six|comes}}
 
 ===Etymology===
-ME ''cutten'', ''kytten'', ''ketten'', ''kitten'', OE ''*cyttan''; from {{etyl|gem}} *{{term||kut-}} (Cf. Norwegian [[kutte]]), akin to OSw ''kotta'' "to cut", ON ''kuti'' "little knife"
+{{etyl|enm}} {{term|cutten|cutten, kytten|lang=enm}} "to cut" (cf {{etyl|sco|-}} {{term|kit|lang=sco}} "to cut") from {{etyl|ang}} *{{term||cyttan|lang=ang}} "to cut" from {{proto|Germanic|kutjanan, *kuttanan|to cut|lang=en}}. Akin to {{etyl|non|-}} {{term|kuti|lang=non}} "small knife", Old {{etyl|sv|-}} {{term|kotta|lang=sv}} "to cut", {{etyl|no|-}} {{term|kutte|lang=no}} "to cut".
 
 ===Pronunciation===
 * {{IPA|/kʌt/}}, {{SAMPA|/"kVt/}}
