--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -13,6 +13,9 @@ From {{etyl|enm}} ''[[stomak#Middle English|stomak]]'' from {{etyl|fro}} ''[[est
 
 # An [[organ]] in animals that stores food in the process of [[digestion]].
 # {{informal}} The [[belly]].
+# {{obsolete}} [[pride|Pride]], [[haughtiness]].
+#*'''1590''', Edmund Spenser, ''The Faerie Queene'', II.vii:
+#*:Sterne was his looke, and full of '''stomacke''' vaine, / His portaunce terrible, and stature tall [...].
 
 ====Synonyms====
 * {{sense|belly}} [[abdomen]], [[belly]], [[gut]], [[guts]], [[tummy]]
