--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -96,7 +96,7 @@
 * Lithuanian: {{t-|lt|badyti|xs=Lithuanian}}
 * Norwegian: {{t+|no|stikke}}
 * Portuguese: {{t|pt|apunhalar}}, {{t-|pt|esfaquear}}
-* Romanian: {{t|ro|a da o lovitură de cuţit}},  {{t|ro|străpunge}},  {{t|ro|înjunghia}}
+* Romanian:   {{t|ro|înjunghia}}, {{t|ro|străpunge}}, {{t|ro|a da o lovitură de cuţit}},
 * [[Romansch]]: {{t|rm|stilettar|xs=Romansch}}, {{t|rm|cuntellar|xs=Romansch}}
 * Russian: {{t|ru|закалывать|tr=zakályvat’}},  {{t|ru|прокалывать}}
 * [[Santali]]: {{tø|sat|ᱨᱳᱜ|tr=rok'|sc=Olck}}
